Hopefully fixing translation issues, at least with english
Signed-off-by: Dario Freddi <drf54321@gmail.com>

--- a/translations/cs/shaman_cs.po
+++ b/translations/cs/shaman_cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-08-22 01:34+0200\n"
+"POT-Creation-Date: 2009-08-22 02:01+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -24,6 +24,7 @@ msgstr ": konfliktní s "
 
 #. (obsolete)
 #: AlpmHandler#3
+msgctxt "AlpmHandler#3"
 msgid "%1 exists in both '%2' and '%3'"
 msgstr "%1 existuje v obou '%2' a '%3'"
 
@@ -267,10 +268,12 @@ msgid ""
 "configuration to improve your building performance."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #. (obsolete)
 #: CallBacks#1
+msgctxt "CallBacks#1"
 msgid ""
 "%1 requires installing %2 from IgnorePkg/IgnoreGroup.\n"
 " Install anyway?"
@@ -280,6 +283,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#2
+msgctxt "CallBacks#2"
 msgid ""
 "%1 is in IgnorePkg/IgnoreGroup.\n"
 " Install anyway?"
@@ -298,6 +302,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#4
+msgctxt "CallBacks#4"
 msgid "Replace %1 with %2/%3?"
 msgstr "Nahradit %1 za %2/%3?"
 
@@ -312,6 +317,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#6
+msgctxt "CallBacks#6"
 msgid ""
 "%1-%2: local version is newer.\n"
 "Upgrade anyway?"
@@ -330,6 +336,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#8
+msgctxt "CallBacks#8"
 msgid ""
 "File %1 is corrupted.\n"
 "Do you want to delete it?"
@@ -784,8 +791,8 @@ msgstr "Příkaz sync nemohl být vykonán!"
 msgid "Process Selected"
 msgstr "Spustit údržbu"
 
-#. (obsolete)
 #: ConfigDialog#94
+#, fuzzy
 msgctxt "ConfigDialog#94"
 msgid "Optimizing Pacman Database..."
 msgstr "Probíhá optimalizace databáze aplikace Pacman..."
@@ -959,6 +966,7 @@ msgstr "Zakázat spouštění aplikace Shaman pod uživatelem root"
 msgid "Saving Configuration"
 msgstr "Uložit konfiguraci"
 
+#. (obsolete)
 #: ConfigDialog#125
 msgid "Unable to save Pacman configuration!"
 msgstr "Nebylo možné uložit konfiguraci!"
@@ -991,6 +999,7 @@ msgstr ""
 "protože je třeba uvolnit alpm\n"
 "Aby se změny projevily je nutné restartovat aplikaci Shaman."
 
+#. (obsolete)
 #: ConfigDialog#129
 msgid ""
 "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
@@ -1089,6 +1098,49 @@ msgstr "Zvolte jazyk:"
 msgid "Disable Tray Icon"
 msgstr "Vypnout ikonu v Systémové části panelu"
 
+#: ConfigDialog#143
+msgctxt "ConfigDialog#143"
+msgid "Database optimized successfully!"
+msgstr ""
+
+#: ConfigDialog#144
+msgctxt "ConfigDialog#144"
+msgid "Could not optimize database!"
+msgstr ""
+
+#: ConfigDialog#145
+msgid "Error saving configuration"
+msgstr ""
+
+#: ConfigDialog#146
+msgid ""
+"There was an error while saving the configuration. This is probably due to "
+"an internal error or you being not authorized to perform the operation"
+msgstr ""
+
+#: ConfigDialog#147
+msgid ""
+"There was an error while trying to add the mirror! This could be due also to "
+"your system policy preventing you from performing this action"
+msgstr ""
+
+#: ConfigDialog#148
+msgid ""
+"<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
+"html40/strict.dtd\">\n"
+"<html><head><meta name=\"qrichtext\" content=\"1\" /><style type=\"text/css\">\n"
+"p, li { white-space: pre-wrap; }\n"
+"</style></head><body style=\" font-family:'Liberation Serif'; font-size:10pt; "
+"font-weight:400; font-style:normal;\">\n"
+"<p style=\" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-"
+"right:0px; -qt-block-indent:0; text-indent:0px;\"><span style=\" font-"
+"family:'Liberation Sans'; font-size:9pt;\">Shaman Manteinance.</span></p>\n"
+"<p style=\" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-"
+"right:0px; -qt-block-indent:0; text-indent:0px;\"><span style=\" font-"
+"family:'Liberation Sans'; font-size:9pt;\">Please choose an action from the "
+"Drop-Down Menu.</span></p></body></html>"
+msgstr ""
+
 #: EditPBuild#1
 msgid "Saving"
 msgstr "Ukládání"
@@ -1100,6 +1152,112 @@ msgid ""
 msgstr ""
 "Upravili jste PKGBUILD.\n"
 "Chcete ho uložit?"
+
+#: ErrorHandler#1
+msgid "There has been an error while preparing the transaction."
+msgstr ""
+
+#: ErrorHandler#2
+msgid "Some dependencies can not be satisfied"
+msgstr ""
+
+#: ErrorHandler#3
+msgid "%1: requires %2"
+msgstr ""
+
+#: ErrorHandler#4
+msgid "Some dependencies create a conflict with already installed packages"
+msgstr ""
+
+#: ErrorHandler#5
+msgid "%1: conflicts with %2"
+msgstr ""
+
+#: ErrorHandler#6
+msgid "No further details were given. Last error string was:"
+msgstr ""
+
+#: ErrorHandler#7
+msgid "There has been an error while committing the transaction."
+msgstr ""
+
+#: ErrorHandler#8
+msgid "Some files in the packages being processed are conflicting"
+msgstr ""
+
+#: ErrorHandler#9
+#, fuzzy
+msgctxt "ErrorHandler#9"
+msgid "%1 exists in both '%2' and '%3'"
+msgstr "%1 existuje v obou '%2' a '%3'"
+
+#: ErrorHandler#10
+msgid ""
+"Some files in the packages being processed conflict with the local "
+"filesystem"
+msgstr ""
+
+#: ErrorHandler#11
+msgid "%1: %2 exists in the filesystem"
+msgstr ""
+
+#: ErrorHandler#12
+msgid "Some downloaded packages are corrupted or invalid"
+msgstr ""
+
+#: ErrorHandler#13
+msgid "%1 is invalid or corrupted"
+msgstr ""
+
+#: ErrorHandler#14
+msgid "There has been an error while adding a target."
+msgstr ""
+
+#: ErrorHandler#15
+msgid ""
+"This is probably an internal Shaman error. Please report it to help the "
+"developers solving it"
+msgstr ""
+
+#: ErrorHandler#16
+msgid "You seem not authorized to perform this operation"
+msgstr ""
+
+#: ErrorHandler#17
+msgid ""
+"It looks like the system policy prevents you from doing this action, or you "
+"failed or refused to authenticate. Please contact your system administrator "
+"for further details"
+msgstr ""
+
+#: ErrorHandler#18
+msgid "There was a problem initialiting Aqpm"
+msgstr ""
+
+#: ErrorHandler#19
+msgid ""
+"Aqpm, the library underneath Shaman, reported that it could not start a "
+"privileged operation. This is probably due to a bug in Shaman/Aqpm or to a "
+"misconfiguration of your system"
+msgstr ""
+
+#: ErrorHandler#20
+msgid "There was an error during the transaction"
+msgstr ""
+
+#: ErrorHandler#21
+msgid ""
+"It looks like Aqpm's worker crashed or disappeared. This is probably an "
+"internal Shaman error. Please report it to help the developers solving it"
+msgstr ""
+
+#: ErrorHandler#22
+msgid "The transaction was interrupted"
+msgstr ""
+
+#: ErrorHandler#23
+msgid "Error occurred"
+msgstr ""
 
 #: LocalPackage#1
 msgid "Install Package from File"
@@ -1142,6 +1300,7 @@ msgid "Cancel"
 msgstr "Zrušit"
 
 #: LocalPackage#6
+msgctxt "LocalPackage#6"
 msgid "Install Package"
 msgstr "Instalovat balíček"
 
@@ -1162,7 +1321,14 @@ msgstr "Všechny závislosti splněny"
 msgid "%n package(s) will be installed as dependencies"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
+
+#: LocalPackageDialog#5
+#, fuzzy
+msgctxt "LocalPackageDialog#5"
+msgid "Install Package"
+msgstr "Instalovat balíček"
 
 #: MainWindow#1
 msgctxt "MainWindow#1"
@@ -1331,8 +1497,8 @@ msgstr "Nastavení..."
 msgid "About..."
 msgstr "O programu..."
 
-#. (obsolete)
 #: MainWindow#38
+#, fuzzy
 msgctxt "MainWindow#38"
 msgid "Update Database"
 msgstr "Aktualizovat databáze"
@@ -1361,8 +1527,8 @@ msgctxt "MainWindow#43"
 msgid "Quit"
 msgstr "Beenden"
 
-#. (obsolete)
 #: MainWindow#44
+#, fuzzy
 msgctxt "MainWindow#44"
 msgid "Process Queue"
 msgstr "Fronta procesů"
@@ -2107,6 +2273,75 @@ msgstr "Ctrl+Q"
 msgid "Name and Description"
 msgstr "Název a popis"
 
+#: MainWindow#155
+#, fuzzy
+msgctxt "MainWindow#155"
+msgid ""
+"%1 requires installing %2 from IgnorePkg/IgnoreGroup.\n"
+" Install anyway?"
+msgstr ""
+"%1 požaduje instalaci %2 z IgnorePkg/IgnoreGroup.\n"
+"Přesto instalovat?"
+
+#: MainWindow#156
+#, fuzzy
+msgctxt "MainWindow#156"
+msgid ""
+"%1 is in IgnorePkg/IgnoreGroup.\n"
+" Install anyway?"
+msgstr ""
+"%1 je v IgnorePkg/IgnoreGroup.\n"
+"Přesto instalovat?"
+
+#: MainWindow#157
+#, fuzzy
+msgctxt "MainWindow#157"
+msgid "Replace %1 with %2/%3?"
+msgstr "Nahradit %1 za %2/%3?"
+
+#: MainWindow#158
+msgid ""
+"%1 conflicts with %2.\n"
+"Remove %2?"
+msgstr ""
+
+#: MainWindow#159
+#, fuzzy
+msgid ""
+"The following package(s) cannot be upgraded due to unresolvable "
+"dependencies:\n"
+"%1\n"
+"\n"
+"Do you want to skip the above package(s) for this upgrade?"
+msgstr ""
+"\n"
+"            \n"
+"        "
+
+#: MainWindow#160
+#, fuzzy
+msgctxt "MainWindow#160"
+msgid ""
+"%1-%2: local version is newer.\n"
+"Upgrade anyway?"
+msgstr ""
+"%1-%2: Místní verze je novější.\n"
+"Přesto aktualizovat?"
+
+#: MainWindow#161
+#, fuzzy
+msgctxt "MainWindow#161"
+msgid ""
+"File %1 is corrupted.\n"
+"Do you want to delete it?"
+msgstr ""
+"Soubor %1 je porušený.\n"
+"Chcete ho odstranit?"
+
+#: MainWindow#162
+msgid "Transaction Question"
+msgstr ""
+
 #: MaintenanceBar#1
 msgid "Please choose an action to start maintenance..."
 msgstr "Vyberte činnost pro započetí údržby..."
@@ -2151,8 +2386,8 @@ msgctxt "MaintenanceBar#9"
 msgid "Deleting Cache..."
 msgstr "Mažu cache..."
 
-#. (obsolete)
 #: MaintenanceBar#10
+#, fuzzy
 msgctxt "MaintenanceBar#10"
 msgid "Optimizing Pacman Database..."
 msgstr "Probíhá optimalizace databáze aplikace Pacman..."
@@ -2263,6 +2498,16 @@ msgstr "Příkaz sync nemohl být vykonán!"
 #: MaintenanceBar#30
 msgid "Maintenance Actions"
 msgstr "Činnosti údržby systému"
+
+#: MaintenanceBar#31
+msgctxt "MaintenanceBar#31"
+msgid "Database optimized successfully!"
+msgstr ""
+
+#: MaintenanceBar#32
+msgctxt "MaintenanceBar#32"
+msgid "Could not optimize database!"
+msgstr ""
 
 #: NewsViewer#1
 msgid "Please wait, fetching items..."
@@ -2389,6 +2634,7 @@ msgstr ""
 "Soubor s nastavení není zapisovatelný.\n"
 "Zkontrolujte prosím přístupová práva."
 
+#. (obsolete)
 #: QObject#11
 msgid ""
 "You have started Shaman as root.\n"
@@ -2404,6 +2650,7 @@ msgctxt "QObject#12"
 msgid "Ok"
 msgstr "Ok"
 
+#. (obsolete)
 #: QObject#13
 msgid ""
 "Shaman can not be started as root.\n"
@@ -2469,6 +2716,11 @@ msgid ""
 msgstr ""
 "Pravděpodobně je spuštěna již jedna instance programu.\n"
 "Je možné spustit pouze jednu instanci."
+
+#: QObject#23
+msgid ""
+"Shaman can not be started as root. Please restart it as unprivileged user."
+msgstr ""
 
 #: QueueDialog#1
 msgid "<br><b> * Validating Transaction</b><br>"
@@ -2563,6 +2815,7 @@ msgid "Starting downloading packages from %1..."
 msgstr "Začalo stahování balíčků z %1..."
 
 # You just have to translate 'remaining' here. Leave everything else as it is.
+#. (obsolete)
 #: QueueDialog#24
 msgid "%p% (%1 KB/s, %4:%5:%6 remaining)"
 msgstr "%p% (%1 KB/s, %4:%5:%6 zbývá)"
@@ -2649,10 +2902,12 @@ msgctxt "QueueDialog#41"
 msgid "Queue Processing"
 msgstr "Zpracovávání fronty"
 
+#. (obsolete)
 #: QueueDialog#42
 msgid "There has been an error while preparing the transaction.\n"
 msgstr "Při přípravě transakce se objevila chyba.\n"
 
+#. (obsolete)
 #: QueueDialog#43
 msgid "There has been an error while committing the transaction.\n"
 msgstr "Při vykonávání transakce se objevila chyba.\n"
@@ -2683,6 +2938,15 @@ msgstr "Fronta byla úspěšně zpracována!"
 msgctxt "QueueDialog#48"
 msgid "Ok"
 msgstr "Ok"
+
+#: QueueDialog#49
+msgid "Running package scripts..."
+msgstr ""
+
+# You just have to translate 'remaining' here. Leave everything else as it is.
+#: QueueDialog#50
+msgid "%p% (%1 KB/s, %2 remaining)"
+msgstr ""
 
 #: QueueReadyDialog#1
 msgid "Review Queue"
@@ -2827,14 +3091,16 @@ msgstr "bude uvolněno <b>%1</b>"
 msgid "Remove <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #: ReviewQueueDialog#17
 #, fuzzy
 msgid "Install/Upgrade <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #: ShamanStatusBar#1
 msgid "%1 Available Packages, %2 Installed Packages, %3 Upgradeable Packages"
@@ -2950,7 +3216,8 @@ msgid ""
 "Click here to upgrade your System."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #. (obsolete)
 #: SysUpgradeDialog#1
@@ -2982,7 +3249,14 @@ msgid ""
 "add it to the current Queue<br> and process it later."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
+
+#: SysUpgradeDialog#5
+#, fuzzy
+msgctxt "SysUpgradeDialog#5"
+msgid "System Upgrade"
+msgstr "Aktualizace systému"
 
 #: aboutDialog#1
 msgid "About Shaman"
