--- a/translations/es/shaman_es.po
+++ b/translations/es/shaman_es.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-08-22 01:34+0200\n"
+"POT-Creation-Date: 2009-08-22 02:01+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,6 +29,7 @@ msgstr "Alpm no dió más detalles."
 
 #. (obsolete)
 #: AlpmHandler#4
+msgctxt "AlpmHandler#4"
 msgid "%1 exists in both '%2' and '%3'"
 msgstr "%1 existe tanto en '%2' como en '%3'"
 
@@ -262,10 +263,12 @@ msgid ""
 "configuration to improve your building performance."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #. (obsolete)
 #: CallBacks#1
+msgctxt "CallBacks#1"
 msgid ""
 "%1 requires installing %2 from IgnorePkg/IgnoreGroup.\n"
 " Install anyway?"
@@ -275,6 +278,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#2
+msgctxt "CallBacks#2"
 msgid ""
 "%1 is in IgnorePkg/IgnoreGroup.\n"
 " Install anyway?"
@@ -293,6 +297,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#4
+msgctxt "CallBacks#4"
 msgid "Replace %1 with %2/%3?"
 msgstr "¿Quiere reemplazar %1 con %2/%3?"
 
@@ -307,6 +312,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#6
+msgctxt "CallBacks#6"
 msgid ""
 "%1-%2: local version is newer.\n"
 "Upgrade anyway?"
@@ -325,6 +331,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#8
+msgctxt "CallBacks#8"
 msgid ""
 "File %1 is corrupted.\n"
 "Do you want to delete it?"
@@ -787,8 +794,8 @@ msgctxt "ConfigDialog#93"
 msgid "Sync could not be executed!!"
 msgstr "¡No se pudo ejecutar sync!"
 
-#. (obsolete)
 #: ConfigDialog#94
+#, fuzzy
 msgctxt "ConfigDialog#94"
 msgid "Optimizing Pacman Database..."
 msgstr "Optimizando la base de datos de Pacman..."
@@ -963,6 +970,7 @@ msgstr "Prohibir a Shaman iniciar como root"
 msgid "Saving Configuration"
 msgstr "Guardando Configuración"
 
+#. (obsolete)
 #: ConfigDialog#125
 msgid "Unable to save Pacman configuration!"
 msgstr "¡No se pudo guardar la configuración de Pacman!"
@@ -1024,6 +1032,7 @@ msgstr ""
 "Sans'; font-size:9pt;\">Por favor elija una opción desde el menú "
 "desplegable.</p></body></html>"
 
+#. (obsolete)
 #: ConfigDialog#130
 msgid ""
 "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
@@ -1140,6 +1149,49 @@ msgstr ""
 "\n"
 "            "
 
+#: ConfigDialog#144
+msgctxt "ConfigDialog#144"
+msgid "Database optimized successfully!"
+msgstr ""
+
+#: ConfigDialog#145
+msgctxt "ConfigDialog#145"
+msgid "Could not optimize database!"
+msgstr ""
+
+#: ConfigDialog#146
+msgid "Error saving configuration"
+msgstr ""
+
+#: ConfigDialog#147
+msgid ""
+"There was an error while saving the configuration. This is probably due to "
+"an internal error or you being not authorized to perform the operation"
+msgstr ""
+
+#: ConfigDialog#148
+msgid ""
+"There was an error while trying to add the mirror! This could be due also to "
+"your system policy preventing you from performing this action"
+msgstr ""
+
+#: ConfigDialog#149
+msgid ""
+"<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
+"html40/strict.dtd\">\n"
+"<html><head><meta name=\"qrichtext\" content=\"1\" /><style type=\"text/css\">\n"
+"p, li { white-space: pre-wrap; }\n"
+"</style></head><body style=\" font-family:'Liberation Serif'; font-size:10pt; "
+"font-weight:400; font-style:normal;\">\n"
+"<p style=\" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-"
+"right:0px; -qt-block-indent:0; text-indent:0px;\"><span style=\" font-"
+"family:'Liberation Sans'; font-size:9pt;\">Shaman Manteinance.</span></p>\n"
+"<p style=\" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-"
+"right:0px; -qt-block-indent:0; text-indent:0px;\"><span style=\" font-"
+"family:'Liberation Sans'; font-size:9pt;\">Please choose an action from the "
+"Drop-Down Menu.</span></p></body></html>"
+msgstr ""
+
 #: EditPBuild#1
 msgid "Saving"
 msgstr "Guardando"
@@ -1151,6 +1203,112 @@ msgid ""
 msgstr ""
 "Modificó este PKGBUILD.\n"
 "¿Quiere guardarlo?"
+
+#: ErrorHandler#1
+msgid "There has been an error while preparing the transaction."
+msgstr ""
+
+#: ErrorHandler#2
+msgid "Some dependencies can not be satisfied"
+msgstr ""
+
+#: ErrorHandler#3
+msgid "%1: requires %2"
+msgstr ""
+
+#: ErrorHandler#4
+msgid "Some dependencies create a conflict with already installed packages"
+msgstr ""
+
+#: ErrorHandler#5
+msgid "%1: conflicts with %2"
+msgstr ""
+
+#: ErrorHandler#6
+msgid "No further details were given. Last error string was:"
+msgstr ""
+
+#: ErrorHandler#7
+msgid "There has been an error while committing the transaction."
+msgstr ""
+
+#: ErrorHandler#8
+msgid "Some files in the packages being processed are conflicting"
+msgstr ""
+
+#: ErrorHandler#9
+#, fuzzy
+msgctxt "ErrorHandler#9"
+msgid "%1 exists in both '%2' and '%3'"
+msgstr "%1 existe tanto en '%2' como en '%3'"
+
+#: ErrorHandler#10
+msgid ""
+"Some files in the packages being processed conflict with the local "
+"filesystem"
+msgstr ""
+
+#: ErrorHandler#11
+msgid "%1: %2 exists in the filesystem"
+msgstr ""
+
+#: ErrorHandler#12
+msgid "Some downloaded packages are corrupted or invalid"
+msgstr ""
+
+#: ErrorHandler#13
+msgid "%1 is invalid or corrupted"
+msgstr ""
+
+#: ErrorHandler#14
+msgid "There has been an error while adding a target."
+msgstr ""
+
+#: ErrorHandler#15
+msgid ""
+"This is probably an internal Shaman error. Please report it to help the "
+"developers solving it"
+msgstr ""
+
+#: ErrorHandler#16
+msgid "You seem not authorized to perform this operation"
+msgstr ""
+
+#: ErrorHandler#17
+msgid ""
+"It looks like the system policy prevents you from doing this action, or you "
+"failed or refused to authenticate. Please contact your system administrator "
+"for further details"
+msgstr ""
+
+#: ErrorHandler#18
+msgid "There was a problem initialiting Aqpm"
+msgstr ""
+
+#: ErrorHandler#19
+msgid ""
+"Aqpm, the library underneath Shaman, reported that it could not start a "
+"privileged operation. This is probably due to a bug in Shaman/Aqpm or to a "
+"misconfiguration of your system"
+msgstr ""
+
+#: ErrorHandler#20
+msgid "There was an error during the transaction"
+msgstr ""
+
+#: ErrorHandler#21
+msgid ""
+"It looks like Aqpm's worker crashed or disappeared. This is probably an "
+"internal Shaman error. Please report it to help the developers solving it"
+msgstr ""
+
+#: ErrorHandler#22
+msgid "The transaction was interrupted"
+msgstr ""
+
+#: ErrorHandler#23
+msgid "Error occurred"
+msgstr ""
 
 #: LocalPackage#1
 #, fuzzy
@@ -1197,6 +1355,7 @@ msgstr "Cancelar"
 
 #: LocalPackage#6
 #, fuzzy
+msgctxt "LocalPackage#6"
 msgid "Install Package"
 msgstr ""
 "\n"
@@ -1226,6 +1385,15 @@ msgstr ""
 #: LocalPackageDialog#4
 #, fuzzy
 msgid "%n package(s) will be installed as dependencies"
+msgstr ""
+"\n"
+"            \n"
+"        "
+
+#: LocalPackageDialog#5
+#, fuzzy
+msgctxt "LocalPackageDialog#5"
+msgid "Install Package"
 msgstr ""
 "\n"
 "            "
@@ -1396,8 +1564,8 @@ msgstr "Opciones..."
 msgid "About..."
 msgstr "Acerca de..."
 
-#. (obsolete)
 #: MainWindow#38
+#, fuzzy
 msgctxt "MainWindow#38"
 msgid "Update Database"
 msgstr "Actualizar base de datos"
@@ -1425,8 +1593,8 @@ msgctxt "MainWindow#43"
 msgid "Quit"
 msgstr "Salir"
 
-#. (obsolete)
 #: MainWindow#44
+#, fuzzy
 msgctxt "MainWindow#44"
 msgid "Process Queue"
 msgstr "Procesar tareas"
@@ -2168,6 +2336,75 @@ msgstr ""
 "\n"
 "            "
 
+#: MainWindow#154
+#, fuzzy
+msgctxt "MainWindow#154"
+msgid ""
+"%1 requires installing %2 from IgnorePkg/IgnoreGroup.\n"
+" Install anyway?"
+msgstr ""
+"%1 necesita instalar %2 desde IgnorePkg/IgnoreGroup.\n"
+" ¿Instalar de todas formas?"
+
+#: MainWindow#155
+#, fuzzy
+msgctxt "MainWindow#155"
+msgid ""
+"%1 is in IgnorePkg/IgnoreGroup.\n"
+" Install anyway?"
+msgstr ""
+"%1 está en IgnorePkg/IgnoreGroup.\n"
+" ¿Instalar de todas formas?"
+
+#: MainWindow#156
+#, fuzzy
+msgctxt "MainWindow#156"
+msgid "Replace %1 with %2/%3?"
+msgstr "¿Quiere reemplazar %1 con %2/%3?"
+
+#: MainWindow#157
+msgid ""
+"%1 conflicts with %2.\n"
+"Remove %2?"
+msgstr ""
+
+#: MainWindow#158
+#, fuzzy
+msgid ""
+"The following package(s) cannot be upgraded due to unresolvable "
+"dependencies:\n"
+"%1\n"
+"\n"
+"Do you want to skip the above package(s) for this upgrade?"
+msgstr ""
+"\n"
+"            \n"
+"        "
+
+#: MainWindow#159
+#, fuzzy
+msgctxt "MainWindow#159"
+msgid ""
+"%1-%2: local version is newer.\n"
+"Upgrade anyway?"
+msgstr ""
+"%1-%2: la versión local es más\n"
+"nueva. ¿Actualizar de todas formas?"
+
+#: MainWindow#160
+#, fuzzy
+msgctxt "MainWindow#160"
+msgid ""
+"File %1 is corrupted.\n"
+"Do you want to delete it?"
+msgstr ""
+"El archivo %1 está corrupto.\n"
+"¿Quiere borrarlo?"
+
+#: MainWindow#161
+msgid "Transaction Question"
+msgstr ""
+
 #: MaintenanceBar#1
 #, fuzzy
 msgid "Please choose an action to start maintenance..."
@@ -2223,8 +2460,8 @@ msgctxt "MaintenanceBar#9"
 msgid "Deleting Cache..."
 msgstr "Borrando el cache..."
 
-#. (obsolete)
 #: MaintenanceBar#10
+#, fuzzy
 msgctxt "MaintenanceBar#10"
 msgid "Optimizing Pacman Database..."
 msgstr "Optimizando la base de datos de Pacman..."
@@ -2355,6 +2592,16 @@ msgstr ""
 "\n"
 "            "
 
+#: MaintenanceBar#31
+msgctxt "MaintenanceBar#31"
+msgid "Database optimized successfully!"
+msgstr ""
+
+#: MaintenanceBar#32
+msgctxt "MaintenanceBar#32"
+msgid "Could not optimize database!"
+msgstr ""
+
 #: NewsViewer#1
 msgid "Please wait, fetching items..."
 msgstr "Espere, por favor, se están descargando noticias..."
@@ -2483,6 +2730,7 @@ msgstr ""
 "en su archivo de opciones.\n"
 "Revise los permisos del mismo."
 
+#. (obsolete)
 #: QObject#11
 msgid ""
 "You have started Shaman as root.\n"
@@ -2519,6 +2767,7 @@ msgstr ""
 "Shaman. Solo puede tener una funcionando\n"
 "a la vez."
 
+#. (obsolete)
 #: QObject#16
 msgid ""
 "Shaman can not be started as root.\n"
@@ -2574,6 +2823,11 @@ msgstr "C&ancel"
 #: QObject#24
 msgid "Whoa, that's co&ol!"
 msgstr "¡&Bien!"
+
+#: QObject#25
+msgid ""
+"Shaman can not be started as root. Please restart it as unprivileged user."
+msgstr ""
 
 #: QueueDialog#1
 msgid "<br><b> * Validating Transaction</b><br>"
@@ -2668,6 +2922,7 @@ msgid "Starting downloading packages from %1..."
 msgstr "Empezando la descarga de paquetes desde %1..."
 
 # You just have to translate 'remaining' here. Leave everything else as it is.
+#. (obsolete)
 #: QueueDialog#24
 msgid "%p% (%1 KB/s, %4:%5:%6 remaining)"
 msgstr "%p% (%1 KB/s, %4:%5:%6 restantes)"
@@ -2763,10 +3018,12 @@ msgstr ""
 "¿Quiere detener el procesamiento de tareas?\n"
 "Esto puede dañar su sistema."
 
+#. (obsolete)
 #: QueueDialog#43
 msgid "There has been an error while preparing the transaction.\n"
 msgstr "Ha ocurrido un error mientras se preparaba la transacción.\n"
 
+#. (obsolete)
 #: QueueDialog#44
 msgid "There has been an error while committing the transaction.\n"
 msgstr "Ha ocurrido un error mientras se ejecutaba la transacción.\n"
@@ -2789,6 +3046,15 @@ msgstr "¡Las tareas fueron procesadas correctamente!"
 msgctxt "QueueDialog#48"
 msgid "Ok"
 msgstr "Ok"
+
+#: QueueDialog#49
+msgid "Running package scripts..."
+msgstr ""
+
+# You just have to translate 'remaining' here. Leave everything else as it is.
+#: QueueDialog#50
+msgid "%p% (%1 KB/s, %2 remaining)"
+msgstr ""
 
 #: QueueReadyDialog#1
 msgid "Review Queue"
@@ -2933,14 +3199,16 @@ msgstr "<b>%1</b> serán liberados"
 msgid "Remove <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #: ReviewQueueDialog#17
 #, fuzzy
 msgid "Install/Upgrade <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #: ShamanStatusBar#1
 msgid "%1 Available Packages, %2 Installed Packages, %3 Upgradeable Packages"
@@ -3055,7 +3323,8 @@ msgid ""
 "Click here to upgrade your System."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #. (obsolete)
 #: SysUpgradeDialog#1
@@ -3087,7 +3356,13 @@ msgid ""
 "add it to the current Queue<br> and process it later."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
+
+#: SysUpgradeDialog#5
+msgctxt "SysUpgradeDialog#5"
+msgid "System Upgrade"
+msgstr ""
 
 #: aboutDialog#1
 msgid "About Shaman"
