--- a/translations/fr/shaman_fr.po
+++ b/translations/fr/shaman_fr.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-08-22 01:34+0200\n"
+"POT-Creation-Date: 2009-08-22 02:01+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -24,6 +24,7 @@ msgstr ": en conflit avec "
 
 #. (obsolete)
 #: AlpmHandler#3
+msgctxt "AlpmHandler#3"
 msgid "%1 exists in both '%2' and '%3'"
 msgstr "%1 existe dans '%2' et '%3'"
 
@@ -272,10 +273,12 @@ msgid ""
 "configuration to improve your building performance."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #. (obsolete)
 #: CallBacks#1
+msgctxt "CallBacks#1"
 msgid ""
 "%1 requires installing %2 from IgnorePkg/IgnoreGroup.\n"
 " Install anyway?"
@@ -285,6 +288,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#2
+msgctxt "CallBacks#2"
 msgid ""
 "%1 is in IgnorePkg/IgnoreGroup.\n"
 " Install anyway?"
@@ -303,6 +307,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#4
+msgctxt "CallBacks#4"
 msgid "Replace %1 with %2/%3?"
 msgstr "Remplacer %1 par %2/%3?"
 
@@ -317,6 +322,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#6
+msgctxt "CallBacks#6"
 msgid ""
 "%1-%2: local version is newer.\n"
 "Upgrade anyway?"
@@ -335,6 +341,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#8
+msgctxt "CallBacks#8"
 msgid ""
 "File %1 is corrupted.\n"
 "Do you want to delete it?"
@@ -799,8 +806,8 @@ msgstr "Sync ne peut pas être exécutée !!"
 msgid "Process Selected"
 msgstr "Processus sélectionné"
 
-#. (obsolete)
 #: ConfigDialog#94
+#, fuzzy
 msgctxt "ConfigDialog#94"
 msgid "Optimizing Pacman Database..."
 msgstr "Optimisation de la base de données Pacman..."
@@ -993,6 +1000,7 @@ msgstr "Interdire le démarrage de Shaman en root"
 msgid "Saving Configuration"
 msgstr "Sauvegarder la configuration"
 
+#. (obsolete)
 #: ConfigDialog#127
 msgid "Unable to save Pacman configuration!"
 msgstr "Impossible de sauvegarder la configuration de Pacman !"
@@ -1056,6 +1064,7 @@ msgstr ""
 "Sans'; font-size:9pt;\">SVP, choisissez une action du menu "
 "déroulant.</p></body></html>"
 
+#. (obsolete)
 #: ConfigDialog#132
 msgid ""
 "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
@@ -1163,6 +1172,49 @@ msgstr ""
 "\n"
 "            "
 
+#: ConfigDialog#146
+msgctxt "ConfigDialog#146"
+msgid "Database optimized successfully!"
+msgstr ""
+
+#: ConfigDialog#147
+msgctxt "ConfigDialog#147"
+msgid "Could not optimize database!"
+msgstr ""
+
+#: ConfigDialog#148
+msgid "Error saving configuration"
+msgstr ""
+
+#: ConfigDialog#149
+msgid ""
+"There was an error while saving the configuration. This is probably due to "
+"an internal error or you being not authorized to perform the operation"
+msgstr ""
+
+#: ConfigDialog#150
+msgid ""
+"There was an error while trying to add the mirror! This could be due also to "
+"your system policy preventing you from performing this action"
+msgstr ""
+
+#: ConfigDialog#151
+msgid ""
+"<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
+"html40/strict.dtd\">\n"
+"<html><head><meta name=\"qrichtext\" content=\"1\" /><style type=\"text/css\">\n"
+"p, li { white-space: pre-wrap; }\n"
+"</style></head><body style=\" font-family:'Liberation Serif'; font-size:10pt; "
+"font-weight:400; font-style:normal;\">\n"
+"<p style=\" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-"
+"right:0px; -qt-block-indent:0; text-indent:0px;\"><span style=\" font-"
+"family:'Liberation Sans'; font-size:9pt;\">Shaman Manteinance.</span></p>\n"
+"<p style=\" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-"
+"right:0px; -qt-block-indent:0; text-indent:0px;\"><span style=\" font-"
+"family:'Liberation Sans'; font-size:9pt;\">Please choose an action from the "
+"Drop-Down Menu.</span></p></body></html>"
+msgstr ""
+
 #: EditPBuild#1
 msgid "Saving"
 msgstr "Sauvegarde"
@@ -1174,6 +1226,112 @@ msgid ""
 msgstr ""
 "Vous avez modifié ce PKGBUILD.\n"
 "Voulez-vous le sauvegarder ?"
+
+#: ErrorHandler#1
+msgid "There has been an error while preparing the transaction."
+msgstr ""
+
+#: ErrorHandler#2
+msgid "Some dependencies can not be satisfied"
+msgstr ""
+
+#: ErrorHandler#3
+msgid "%1: requires %2"
+msgstr ""
+
+#: ErrorHandler#4
+msgid "Some dependencies create a conflict with already installed packages"
+msgstr ""
+
+#: ErrorHandler#5
+msgid "%1: conflicts with %2"
+msgstr ""
+
+#: ErrorHandler#6
+msgid "No further details were given. Last error string was:"
+msgstr ""
+
+#: ErrorHandler#7
+msgid "There has been an error while committing the transaction."
+msgstr ""
+
+#: ErrorHandler#8
+msgid "Some files in the packages being processed are conflicting"
+msgstr ""
+
+#: ErrorHandler#9
+#, fuzzy
+msgctxt "ErrorHandler#9"
+msgid "%1 exists in both '%2' and '%3'"
+msgstr "%1 existe dans '%2' et '%3'"
+
+#: ErrorHandler#10
+msgid ""
+"Some files in the packages being processed conflict with the local "
+"filesystem"
+msgstr ""
+
+#: ErrorHandler#11
+msgid "%1: %2 exists in the filesystem"
+msgstr ""
+
+#: ErrorHandler#12
+msgid "Some downloaded packages are corrupted or invalid"
+msgstr ""
+
+#: ErrorHandler#13
+msgid "%1 is invalid or corrupted"
+msgstr ""
+
+#: ErrorHandler#14
+msgid "There has been an error while adding a target."
+msgstr ""
+
+#: ErrorHandler#15
+msgid ""
+"This is probably an internal Shaman error. Please report it to help the "
+"developers solving it"
+msgstr ""
+
+#: ErrorHandler#16
+msgid "You seem not authorized to perform this operation"
+msgstr ""
+
+#: ErrorHandler#17
+msgid ""
+"It looks like the system policy prevents you from doing this action, or you "
+"failed or refused to authenticate. Please contact your system administrator "
+"for further details"
+msgstr ""
+
+#: ErrorHandler#18
+msgid "There was a problem initialiting Aqpm"
+msgstr ""
+
+#: ErrorHandler#19
+msgid ""
+"Aqpm, the library underneath Shaman, reported that it could not start a "
+"privileged operation. This is probably due to a bug in Shaman/Aqpm or to a "
+"misconfiguration of your system"
+msgstr ""
+
+#: ErrorHandler#20
+msgid "There was an error during the transaction"
+msgstr ""
+
+#: ErrorHandler#21
+msgid ""
+"It looks like Aqpm's worker crashed or disappeared. This is probably an "
+"internal Shaman error. Please report it to help the developers solving it"
+msgstr ""
+
+#: ErrorHandler#22
+msgid "The transaction was interrupted"
+msgstr ""
+
+#: ErrorHandler#23
+msgid "Error occurred"
+msgstr ""
 
 #: LocalPackage#1
 #, fuzzy
@@ -1220,6 +1378,7 @@ msgstr "Annuler"
 
 #: LocalPackage#6
 #, fuzzy
+msgctxt "LocalPackage#6"
 msgid "Install Package"
 msgstr ""
 "\n"
@@ -1249,6 +1408,15 @@ msgstr ""
 #: LocalPackageDialog#4
 #, fuzzy
 msgid "%n package(s) will be installed as dependencies"
+msgstr ""
+"\n"
+"            \n"
+"        "
+
+#: LocalPackageDialog#5
+#, fuzzy
+msgctxt "LocalPackageDialog#5"
+msgid "Install Package"
 msgstr ""
 "\n"
 "            "
@@ -1419,8 +1587,8 @@ msgstr "Configuration..."
 msgid "About..."
 msgstr "A propos..."
 
-#. (obsolete)
 #: MainWindow#38
+#, fuzzy
 msgctxt "MainWindow#38"
 msgid "Update Database"
 msgstr "Mettre à jour la base de données"
@@ -1448,8 +1616,8 @@ msgctxt "MainWindow#43"
 msgid "Quit"
 msgstr "Quitter"
 
-#. (obsolete)
 #: MainWindow#44
+#, fuzzy
 msgctxt "MainWindow#44"
 msgid "Process Queue"
 msgstr "Effectuer la liste"
@@ -2211,6 +2379,75 @@ msgstr ""
 "\n"
 "            "
 
+#: MainWindow#156
+#, fuzzy
+msgctxt "MainWindow#156"
+msgid ""
+"%1 requires installing %2 from IgnorePkg/IgnoreGroup.\n"
+" Install anyway?"
+msgstr ""
+"%1 requiert l'installation de %2 depuis IgnorePkg/IgnoreGroup.\n"
+"      Installer tout de même ?"
+
+#: MainWindow#157
+#, fuzzy
+msgctxt "MainWindow#157"
+msgid ""
+"%1 is in IgnorePkg/IgnoreGroup.\n"
+" Install anyway?"
+msgstr ""
+"%1 fait partie de IgnorePkg/IgnoreGroup.\n"
+"      Installer tout de même ?"
+
+#: MainWindow#158
+#, fuzzy
+msgctxt "MainWindow#158"
+msgid "Replace %1 with %2/%3?"
+msgstr "Remplacer %1 par %2/%3?"
+
+#: MainWindow#159
+msgid ""
+"%1 conflicts with %2.\n"
+"Remove %2?"
+msgstr ""
+
+#: MainWindow#160
+#, fuzzy
+msgid ""
+"The following package(s) cannot be upgraded due to unresolvable "
+"dependencies:\n"
+"%1\n"
+"\n"
+"Do you want to skip the above package(s) for this upgrade?"
+msgstr ""
+"\n"
+"            \n"
+"        "
+
+#: MainWindow#161
+#, fuzzy
+msgctxt "MainWindow#161"
+msgid ""
+"%1-%2: local version is newer.\n"
+"Upgrade anyway?"
+msgstr ""
+"%1-%2: La version locale est plus récente.\n"
+"Mettre à jour tout de même ?"
+
+#: MainWindow#162
+#, fuzzy
+msgctxt "MainWindow#162"
+msgid ""
+"File %1 is corrupted.\n"
+"Do you want to delete it?"
+msgstr ""
+"Le fichier %1 est corrompu.\n"
+"Voulez-vous le supprimer ?"
+
+#: MainWindow#163
+msgid "Transaction Question"
+msgstr ""
+
 #: MaintenanceBar#1
 #, fuzzy
 msgid "Please choose an action to start maintenance..."
@@ -2266,8 +2503,8 @@ msgctxt "MaintenanceBar#9"
 msgid "Deleting Cache..."
 msgstr "Suppression du cache..."
 
-#. (obsolete)
 #: MaintenanceBar#10
+#, fuzzy
 msgctxt "MaintenanceBar#10"
 msgid "Optimizing Pacman Database..."
 msgstr "Optimisation de la base de données Pacman..."
@@ -2397,6 +2634,16 @@ msgid "Maintenance Actions"
 msgstr ""
 "\n"
 "            "
+
+#: MaintenanceBar#31
+msgctxt "MaintenanceBar#31"
+msgid "Database optimized successfully!"
+msgstr ""
+
+#: MaintenanceBar#32
+msgctxt "MaintenanceBar#32"
+msgid "Could not optimize database!"
+msgstr ""
 
 #: NewsViewer#1
 msgid "Please wait, fetching items..."
@@ -2538,6 +2785,7 @@ msgstr ""
 "Votre fichier de configuration semble être non-inscriptible.\n"
 "SVP, vérifiez les permissions de ce dernier."
 
+#. (obsolete)
 #: QObject#14
 msgid ""
 "You have started Shaman as root.\n"
@@ -2557,6 +2805,7 @@ msgstr ""
 "Il semble qu'une autre fenêtre Shaman soit ouverte.\n"
 "Vous ne pouvez lancer qu'une seule fenêtre Shaman à la fois."
 
+#. (obsolete)
 #: QObject#16
 msgid ""
 "Shaman can not be started as root.\n"
@@ -2611,6 +2860,11 @@ msgstr "A&nnuler"
 #: QObject#24
 msgid "Whoa, that's co&ol!"
 msgstr "Whoa, c'est co&ol !"
+
+#: QObject#25
+msgid ""
+"Shaman can not be started as root. Please restart it as unprivileged user."
+msgstr ""
 
 #: QueueDialog#1
 msgid "<br><b> * Validating Transaction</b><br>"
@@ -2705,6 +2959,7 @@ msgid "Starting downloading packages from %1..."
 msgstr "Début du téléchargement des paquets depuis %1..."
 
 # You just have to translate 'remaining' here. Leave everything else as it is.
+#. (obsolete)
 #: QueueDialog#24
 msgid "%p% (%1 KB/s, %4:%5:%6 remaining)"
 msgstr "%p% (%1 KB/s, %4:%5:%6 restant)"
@@ -2792,10 +3047,12 @@ msgctxt "QueueDialog#41"
 msgid "Queue Processing"
 msgstr "Liste en cours"
 
+#. (obsolete)
 #: QueueDialog#42
 msgid "There has been an error while preparing the transaction.\n"
 msgstr "Il y a eu une erreur dans la préparation de la transaction.\n"
 
+#. (obsolete)
 #: QueueDialog#43
 msgid "There has been an error while committing the transaction.\n"
 msgstr "Il y a eu une erreur pendant l'exécution de la transaction.\n"
@@ -2826,6 +3083,15 @@ msgstr ""
 msgctxt "QueueDialog#48"
 msgid "Ok"
 msgstr "Ok"
+
+#: QueueDialog#49
+msgid "Running package scripts..."
+msgstr ""
+
+# You just have to translate 'remaining' here. Leave everything else as it is.
+#: QueueDialog#50
+msgid "%p% (%1 KB/s, %2 remaining)"
+msgstr ""
 
 #: QueueReadyDialog#1
 msgid "Review Queue"
@@ -2970,14 +3236,16 @@ msgstr "<b>%1</b> sera libéré"
 msgid "Remove <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #: ReviewQueueDialog#17
 #, fuzzy
 msgid "Install/Upgrade <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #: ShamanStatusBar#1
 msgid "%1 Available Packages, %2 Installed Packages, %3 Upgradeable Packages"
@@ -3091,7 +3359,8 @@ msgid ""
 "Click here to upgrade your System."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #. (obsolete)
 #: SysUpgradeDialog#1
@@ -3125,7 +3394,14 @@ msgid ""
 "add it to the current Queue<br> and process it later."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
+
+#: SysUpgradeDialog#5
+#, fuzzy
+msgctxt "SysUpgradeDialog#5"
+msgid "System Upgrade"
+msgstr "Mise à jour du système"
 
 #: aboutDialog#1
 msgid "About Shaman"
