--- a/translations/mk/shaman_mk.po
+++ b/translations/mk/shaman_mk.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-08-22 01:34+0200\n"
+"POT-Creation-Date: 2009-08-22 02:01+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,6 +29,7 @@ msgstr "Alpm не даде понатамошни детали."
 
 #. (obsolete)
 #: AlpmHandler#4
+msgctxt "AlpmHandler#4"
 msgid "%1 exists in both '%2' and '%3'"
 msgstr "%1 постои во '%2' и во '%3'"
 
@@ -214,10 +215,12 @@ msgid ""
 "configuration to improve your building performance."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #. (obsolete)
 #: CallBacks#1
+msgctxt "CallBacks#1"
 msgid ""
 "%1 requires installing %2 from IgnorePkg/IgnoreGroup.\n"
 " Install anyway?"
@@ -227,6 +230,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#2
+msgctxt "CallBacks#2"
 msgid ""
 "%1 is in IgnorePkg/IgnoreGroup.\n"
 " Install anyway?"
@@ -245,6 +249,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#4
+msgctxt "CallBacks#4"
 msgid "Replace %1 with %2/%3?"
 msgstr "Заменете го %1 со %2/%3?"
 
@@ -257,6 +262,7 @@ msgstr "%1 е во конфликт со %2. Отстранете го %3?"
 
 #. (obsolete)
 #: CallBacks#6
+msgctxt "CallBacks#6"
 msgid ""
 "%1-%2: local version is newer.\n"
 "Upgrade anyway?"
@@ -266,6 +272,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#7
+msgctxt "CallBacks#7"
 msgid ""
 "File %1 is corrupted.\n"
 "Do you want to delete it?"
@@ -352,8 +359,8 @@ msgctxt "ConfigDialog#17"
 msgid "Deleting Cache..."
 msgstr "Бришење на кешот..."
 
-#. (obsolete)
 #: ConfigDialog#18
+#, fuzzy
 msgctxt "ConfigDialog#18"
 msgid "Optimizing Pacman Database..."
 msgstr "Оптимизирање на датабазата на Pacman..."
@@ -407,6 +414,7 @@ msgstr "Околините за создавање на пакети се усп
 msgid "Saving Configuration"
 msgstr "Зачувување на конфигурацијата"
 
+#. (obsolete)
 #: ConfigDialog#29
 msgid "Unable to save Pacman configuration!"
 msgstr "Не можеше да се зачува конфигурацијата за Pacman!"
@@ -573,6 +581,7 @@ msgstr "Обработи ги одбраните"
 msgid "Waiting"
 msgstr "Исчекувам"
 
+#. (obsolete)
 #: ConfigDialog#59
 msgid ""
 "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
@@ -979,6 +988,49 @@ msgstr ""
 "\n"
 "            "
 
+#: ConfigDialog#138
+msgctxt "ConfigDialog#138"
+msgid "Database optimized successfully!"
+msgstr ""
+
+#: ConfigDialog#139
+msgctxt "ConfigDialog#139"
+msgid "Could not optimize database!"
+msgstr ""
+
+#: ConfigDialog#140
+msgid "Error saving configuration"
+msgstr ""
+
+#: ConfigDialog#141
+msgid ""
+"There was an error while saving the configuration. This is probably due to "
+"an internal error or you being not authorized to perform the operation"
+msgstr ""
+
+#: ConfigDialog#142
+msgid ""
+"There was an error while trying to add the mirror! This could be due also to "
+"your system policy preventing you from performing this action"
+msgstr ""
+
+#: ConfigDialog#143
+msgid ""
+"<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
+"html40/strict.dtd\">\n"
+"<html><head><meta name=\"qrichtext\" content=\"1\" /><style type=\"text/css\">\n"
+"p, li { white-space: pre-wrap; }\n"
+"</style></head><body style=\" font-family:'Liberation Serif'; font-size:10pt; "
+"font-weight:400; font-style:normal;\">\n"
+"<p style=\" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-"
+"right:0px; -qt-block-indent:0; text-indent:0px;\"><span style=\" font-"
+"family:'Liberation Sans'; font-size:9pt;\">Shaman Manteinance.</span></p>\n"
+"<p style=\" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-"
+"right:0px; -qt-block-indent:0; text-indent:0px;\"><span style=\" font-"
+"family:'Liberation Sans'; font-size:9pt;\">Please choose an action from the "
+"Drop-Down Menu.</span></p></body></html>"
+msgstr ""
+
 #: EditPBuild#1
 msgid "Saving"
 msgstr "Зачувувам"
@@ -990,6 +1042,112 @@ msgid ""
 msgstr ""
 "го модифициравте овој PKGBUILD.\n"
 "Дали сакате да го зачувате?"
+
+#: ErrorHandler#1
+msgid "There has been an error while preparing the transaction."
+msgstr ""
+
+#: ErrorHandler#2
+msgid "Some dependencies can not be satisfied"
+msgstr ""
+
+#: ErrorHandler#3
+msgid "%1: requires %2"
+msgstr ""
+
+#: ErrorHandler#4
+msgid "Some dependencies create a conflict with already installed packages"
+msgstr ""
+
+#: ErrorHandler#5
+msgid "%1: conflicts with %2"
+msgstr ""
+
+#: ErrorHandler#6
+msgid "No further details were given. Last error string was:"
+msgstr ""
+
+#: ErrorHandler#7
+msgid "There has been an error while committing the transaction."
+msgstr ""
+
+#: ErrorHandler#8
+msgid "Some files in the packages being processed are conflicting"
+msgstr ""
+
+#: ErrorHandler#9
+#, fuzzy
+msgctxt "ErrorHandler#9"
+msgid "%1 exists in both '%2' and '%3'"
+msgstr "%1 постои во '%2' и во '%3'"
+
+#: ErrorHandler#10
+msgid ""
+"Some files in the packages being processed conflict with the local "
+"filesystem"
+msgstr ""
+
+#: ErrorHandler#11
+msgid "%1: %2 exists in the filesystem"
+msgstr ""
+
+#: ErrorHandler#12
+msgid "Some downloaded packages are corrupted or invalid"
+msgstr ""
+
+#: ErrorHandler#13
+msgid "%1 is invalid or corrupted"
+msgstr ""
+
+#: ErrorHandler#14
+msgid "There has been an error while adding a target."
+msgstr ""
+
+#: ErrorHandler#15
+msgid ""
+"This is probably an internal Shaman error. Please report it to help the "
+"developers solving it"
+msgstr ""
+
+#: ErrorHandler#16
+msgid "You seem not authorized to perform this operation"
+msgstr ""
+
+#: ErrorHandler#17
+msgid ""
+"It looks like the system policy prevents you from doing this action, or you "
+"failed or refused to authenticate. Please contact your system administrator "
+"for further details"
+msgstr ""
+
+#: ErrorHandler#18
+msgid "There was a problem initialiting Aqpm"
+msgstr ""
+
+#: ErrorHandler#19
+msgid ""
+"Aqpm, the library underneath Shaman, reported that it could not start a "
+"privileged operation. This is probably due to a bug in Shaman/Aqpm or to a "
+"misconfiguration of your system"
+msgstr ""
+
+#: ErrorHandler#20
+msgid "There was an error during the transaction"
+msgstr ""
+
+#: ErrorHandler#21
+msgid ""
+"It looks like Aqpm's worker crashed or disappeared. This is probably an "
+"internal Shaman error. Please report it to help the developers solving it"
+msgstr ""
+
+#: ErrorHandler#22
+msgid "The transaction was interrupted"
+msgstr ""
+
+#: ErrorHandler#23
+msgid "Error occurred"
+msgstr ""
 
 #: LocalPackage#1
 msgid "Install Package from File"
@@ -1032,6 +1190,7 @@ msgid "Cancel"
 msgstr "Откажи"
 
 #: LocalPackage#6
+msgctxt "LocalPackage#6"
 msgid "Install Package"
 msgstr "Инсталирај пакет"
 
@@ -1052,7 +1211,14 @@ msgstr "Сите зависности се задоволени"
 msgid "%n package(s) will be installed as dependencies"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
+
+#: LocalPackageDialog#5
+#, fuzzy
+msgctxt "LocalPackageDialog#5"
+msgid "Install Package"
+msgstr "Инсталирај пакет"
 
 #: MainWindow#1
 msgid "Name"
@@ -1530,8 +1696,8 @@ msgstr "Поставувања..."
 msgid "About..."
 msgstr "За..."
 
-#. (obsolete)
 #: MainWindow#92
+#, fuzzy
 msgctxt "MainWindow#92"
 msgid "Update Database"
 msgstr "Ажурирај ја датабазата"
@@ -1559,8 +1725,8 @@ msgctxt "MainWindow#97"
 msgid "Quit"
 msgstr "Исклучи"
 
-#. (obsolete)
 #: MainWindow#98
+#, fuzzy
 msgctxt "MainWindow#98"
 msgid "Process Queue"
 msgstr "Обработи ја редицата"
@@ -1581,6 +1747,75 @@ msgstr "Ctrl+Q"
 #: MainWindow#102
 msgid "Name and Description"
 msgstr "Име и опис"
+
+#: MainWindow#103
+#, fuzzy
+msgctxt "MainWindow#103"
+msgid ""
+"%1 requires installing %2 from IgnorePkg/IgnoreGroup.\n"
+" Install anyway?"
+msgstr ""
+"%1 бара да се инсталира %2 од IgnorePkg/IgnoreGroup.\n"
+"Дали сакате да инсталирате?"
+
+#: MainWindow#104
+#, fuzzy
+msgctxt "MainWindow#104"
+msgid ""
+"%1 is in IgnorePkg/IgnoreGroup.\n"
+" Install anyway?"
+msgstr ""
+"%1 е во IgnorePkg/IgnoreGroup.\n"
+"Дали сакате да инсталирате?"
+
+#: MainWindow#105
+#, fuzzy
+msgctxt "MainWindow#105"
+msgid "Replace %1 with %2/%3?"
+msgstr "Заменете го %1 со %2/%3?"
+
+#: MainWindow#106
+msgid ""
+"%1 conflicts with %2.\n"
+"Remove %2?"
+msgstr ""
+
+#: MainWindow#107
+#, fuzzy
+msgid ""
+"The following package(s) cannot be upgraded due to unresolvable "
+"dependencies:\n"
+"%1\n"
+"\n"
+"Do you want to skip the above package(s) for this upgrade?"
+msgstr ""
+"\n"
+"            \n"
+"        "
+
+#: MainWindow#108
+#, fuzzy
+msgctxt "MainWindow#108"
+msgid ""
+"%1-%2: local version is newer.\n"
+"Upgrade anyway?"
+msgstr ""
+"%1-%2: локалната верзија е понова.\n"
+"Дали сакате да надградите?"
+
+#: MainWindow#109
+#, fuzzy
+msgctxt "MainWindow#109"
+msgid ""
+"File %1 is corrupted.\n"
+"Do you want to delete it?"
+msgstr ""
+"Датотеката %1 е неисправна.\n"
+"Дали сакате да ја избришете?"
+
+#: MainWindow#110
+msgid "Transaction Question"
+msgstr ""
 
 #: MaintenanceBar#1
 msgid "Please choose an action to start maintenance..."
@@ -1626,8 +1861,8 @@ msgctxt "MaintenanceBar#9"
 msgid "Deleting Cache..."
 msgstr "Бришење на кешот..."
 
-#. (obsolete)
 #: MaintenanceBar#10
+#, fuzzy
 msgctxt "MaintenanceBar#10"
 msgid "Optimizing Pacman Database..."
 msgstr "Оптимизирање на датабазата на Pacman..."
@@ -1738,6 +1973,16 @@ msgstr "Sync не можеше да биде извршена!!"
 #: MaintenanceBar#30
 msgid "Maintenance Actions"
 msgstr "Опции за одржување"
+
+#: MaintenanceBar#31
+msgctxt "MaintenanceBar#31"
+msgid "Database optimized successfully!"
+msgstr ""
+
+#: MaintenanceBar#32
+msgctxt "MaintenanceBar#32"
+msgid "Could not optimize database!"
+msgstr ""
 
 #: NewsViewer#1
 msgid "Please wait, fetching items..."
@@ -1875,6 +2120,7 @@ msgctxt "QObject#13"
 msgid "Please Wait..."
 msgstr "Ве молиме почекајте..."
 
+#. (obsolete)
 #: QObject#14
 msgid ""
 "Shaman can not be started as root.\n"
@@ -1883,6 +2129,7 @@ msgstr ""
 "Shaman не може да се изврши како root.\n"
 "Ве молиме извршете го како непривилегиран корисник."
 
+#. (obsolete)
 #: QObject#15
 msgid ""
 "You have started Shaman as root.\n"
@@ -1923,6 +2170,11 @@ msgid ""
 msgstr ""
 "\n"
 "            "
+
+#: QObject#21
+msgid ""
+"Shaman can not be started as root. Please restart it as unprivileged user."
+msgstr ""
 
 #: QueueDialog#1
 msgid "<br><b> * Validating Transaction</b><br>"
@@ -2017,6 +2269,7 @@ msgid "Starting downloading packages from %1..."
 msgstr "Започнување со симнување на пакети од %1..."
 
 # You just have to translate 'remaining' here. Leave everything else as it is.
+#. (obsolete)
 #: QueueDialog#24
 msgid "%p% (%1 KB/s, %4:%5:%6 remaining)"
 msgstr "%p% (%1 KB/s, %4:%5:%6 останато)"
@@ -2089,13 +2342,24 @@ msgstr ""
 "Дали сакате да го откажете обработувањето на редицата?\n"
 "Ова може да го оштети вашиот систем."
 
+#. (obsolete)
 #: QueueDialog#39
 msgid "There has been an error while preparing the transaction.\n"
 msgstr "Имаше грешка при подготвувањето на трансакцијата.\n"
 
+#. (obsolete)
 #: QueueDialog#40
 msgid "There has been an error while committing the transaction.\n"
 msgstr "Имаше грешка при предавањето на трансакцијата.\n"
+
+#: QueueDialog#41
+msgid "Running package scripts..."
+msgstr ""
+
+# You just have to translate 'remaining' here. Leave everything else as it is.
+#: QueueDialog#42
+msgid "%p% (%1 KB/s, %2 remaining)"
+msgstr ""
 
 #: QueueReadyDialog#1
 msgid "Review Queue"
@@ -2203,14 +2467,16 @@ msgstr "Дали сакате да продолжите?"
 msgid "Remove <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #: ReviewQueueDialog#11
 #, fuzzy
 msgid "Install/Upgrade <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #: ShamanStatusBar#1
 msgid "%1 Available Packages, %2 Installed Packages, %3 Upgradeable Packages"
@@ -2301,7 +2567,8 @@ msgid ""
 "Click here to upgrade your System."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #: SysUpgradeDialog#1
 msgctxt "SysUpgradeDialog#1"
@@ -2315,7 +2582,14 @@ msgid ""
 "add it to the current Queue<br> and process it later."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
+
+#: SysUpgradeDialog#3
+#, fuzzy
+msgctxt "SysUpgradeDialog#3"
+msgid "System Upgrade"
+msgstr "Надградба на системот"
 
 #: aboutDialog#1
 msgid "About Shaman"
