--- a/translations/pt_BR/shaman_pt_BR.po
+++ b/translations/pt_BR/shaman_pt_BR.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-08-22 01:34+0200\n"
+"POT-Creation-Date: 2009-08-22 02:01+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -24,6 +24,7 @@ msgstr ": conflita com "
 
 #. (obsolete)
 #: AlpmHandler#3
+msgctxt "AlpmHandler#3"
 msgid "%1 exists in both '%2' and '%3'"
 msgstr "%1 existe em '%2' e '%3'"
 
@@ -244,10 +245,12 @@ msgid ""
 "configuration to improve your building performance."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #. (obsolete)
 #: CallBacks#1
+msgctxt "CallBacks#1"
 msgid ""
 "%1 requires installing %2 from IgnorePkg/IgnoreGroup.\n"
 " Install anyway?"
@@ -257,6 +260,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#2
+msgctxt "CallBacks#2"
 msgid ""
 "%1 is in IgnorePkg/IgnoreGroup.\n"
 " Install anyway?"
@@ -275,6 +279,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#4
+msgctxt "CallBacks#4"
 msgid "Replace %1 with %2/%3?"
 msgstr "Substituir %1 por %2/%3?"
 
@@ -289,6 +294,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#6
+msgctxt "CallBacks#6"
 msgid ""
 "%1-%2: local version is newer.\n"
 "Upgrade anyway?"
@@ -298,6 +304,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#7
+msgctxt "CallBacks#7"
 msgid ""
 "File %1 is corrupted.\n"
 "Do you want to delete it?"
@@ -653,8 +660,8 @@ msgctxt "ConfigDialog#72"
 msgid "Deleting Cache..."
 msgstr "Deletando cache..."
 
-#. (obsolete)
 #: ConfigDialog#73
+#, fuzzy
 msgctxt "ConfigDialog#73"
 msgid "Optimizing Pacman Database..."
 msgstr "Otimizando base de dados do Pacman..."
@@ -952,6 +959,7 @@ msgstr "Cancelar"
 msgid "Saving Configuration"
 msgstr "Salvando Configuração"
 
+#. (obsolete)
 #: ConfigDialog#121
 msgid "Unable to save Pacman configuration!"
 msgstr "Não foi possível salvar a configuração do Pacman!"
@@ -1032,6 +1040,7 @@ msgstr "Iniciar o Shaman junto com o X"
 msgid "Forbid starting Shaman as root"
 msgstr "Não permitir iniciar o Shaman como root"
 
+#. (obsolete)
 #: ConfigDialog#130
 msgid ""
 "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
@@ -1139,6 +1148,49 @@ msgstr ""
 "\n"
 "            "
 
+#: ConfigDialog#144
+msgctxt "ConfigDialog#144"
+msgid "Database optimized successfully!"
+msgstr ""
+
+#: ConfigDialog#145
+msgctxt "ConfigDialog#145"
+msgid "Could not optimize database!"
+msgstr ""
+
+#: ConfigDialog#146
+msgid "Error saving configuration"
+msgstr ""
+
+#: ConfigDialog#147
+msgid ""
+"There was an error while saving the configuration. This is probably due to "
+"an internal error or you being not authorized to perform the operation"
+msgstr ""
+
+#: ConfigDialog#148
+msgid ""
+"There was an error while trying to add the mirror! This could be due also to "
+"your system policy preventing you from performing this action"
+msgstr ""
+
+#: ConfigDialog#149
+msgid ""
+"<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
+"html40/strict.dtd\">\n"
+"<html><head><meta name=\"qrichtext\" content=\"1\" /><style type=\"text/css\">\n"
+"p, li { white-space: pre-wrap; }\n"
+"</style></head><body style=\" font-family:'Liberation Serif'; font-size:10pt; "
+"font-weight:400; font-style:normal;\">\n"
+"<p style=\" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-"
+"right:0px; -qt-block-indent:0; text-indent:0px;\"><span style=\" font-"
+"family:'Liberation Sans'; font-size:9pt;\">Shaman Manteinance.</span></p>\n"
+"<p style=\" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-"
+"right:0px; -qt-block-indent:0; text-indent:0px;\"><span style=\" font-"
+"family:'Liberation Sans'; font-size:9pt;\">Please choose an action from the "
+"Drop-Down Menu.</span></p></body></html>"
+msgstr ""
+
 #: EditPBuild#1
 msgid "Saving"
 msgstr "Salvando"
@@ -1150,6 +1202,112 @@ msgid ""
 msgstr ""
 "Você modificou este PKGBUILD.\n"
 "Deseja salvá-lo?"
+
+#: ErrorHandler#1
+msgid "There has been an error while preparing the transaction."
+msgstr ""
+
+#: ErrorHandler#2
+msgid "Some dependencies can not be satisfied"
+msgstr ""
+
+#: ErrorHandler#3
+msgid "%1: requires %2"
+msgstr ""
+
+#: ErrorHandler#4
+msgid "Some dependencies create a conflict with already installed packages"
+msgstr ""
+
+#: ErrorHandler#5
+msgid "%1: conflicts with %2"
+msgstr ""
+
+#: ErrorHandler#6
+msgid "No further details were given. Last error string was:"
+msgstr ""
+
+#: ErrorHandler#7
+msgid "There has been an error while committing the transaction."
+msgstr ""
+
+#: ErrorHandler#8
+msgid "Some files in the packages being processed are conflicting"
+msgstr ""
+
+#: ErrorHandler#9
+#, fuzzy
+msgctxt "ErrorHandler#9"
+msgid "%1 exists in both '%2' and '%3'"
+msgstr "%1 existe em '%2' e '%3'"
+
+#: ErrorHandler#10
+msgid ""
+"Some files in the packages being processed conflict with the local "
+"filesystem"
+msgstr ""
+
+#: ErrorHandler#11
+msgid "%1: %2 exists in the filesystem"
+msgstr ""
+
+#: ErrorHandler#12
+msgid "Some downloaded packages are corrupted or invalid"
+msgstr ""
+
+#: ErrorHandler#13
+msgid "%1 is invalid or corrupted"
+msgstr ""
+
+#: ErrorHandler#14
+msgid "There has been an error while adding a target."
+msgstr ""
+
+#: ErrorHandler#15
+msgid ""
+"This is probably an internal Shaman error. Please report it to help the "
+"developers solving it"
+msgstr ""
+
+#: ErrorHandler#16
+msgid "You seem not authorized to perform this operation"
+msgstr ""
+
+#: ErrorHandler#17
+msgid ""
+"It looks like the system policy prevents you from doing this action, or you "
+"failed or refused to authenticate. Please contact your system administrator "
+"for further details"
+msgstr ""
+
+#: ErrorHandler#18
+msgid "There was a problem initialiting Aqpm"
+msgstr ""
+
+#: ErrorHandler#19
+msgid ""
+"Aqpm, the library underneath Shaman, reported that it could not start a "
+"privileged operation. This is probably due to a bug in Shaman/Aqpm or to a "
+"misconfiguration of your system"
+msgstr ""
+
+#: ErrorHandler#20
+msgid "There was an error during the transaction"
+msgstr ""
+
+#: ErrorHandler#21
+msgid ""
+"It looks like Aqpm's worker crashed or disappeared. This is probably an "
+"internal Shaman error. Please report it to help the developers solving it"
+msgstr ""
+
+#: ErrorHandler#22
+msgid "The transaction was interrupted"
+msgstr ""
+
+#: ErrorHandler#23
+msgid "Error occurred"
+msgstr ""
 
 #: LocalPackage#1
 #, fuzzy
@@ -1196,6 +1354,7 @@ msgstr "Cancelar"
 
 #: LocalPackage#6
 #, fuzzy
+msgctxt "LocalPackage#6"
 msgid "Install Package"
 msgstr ""
 "\n"
@@ -1225,6 +1384,15 @@ msgstr ""
 #: LocalPackageDialog#4
 #, fuzzy
 msgid "%n package(s) will be installed as dependencies"
+msgstr ""
+"\n"
+"            \n"
+"        "
+
+#: LocalPackageDialog#5
+#, fuzzy
+msgctxt "LocalPackageDialog#5"
+msgid "Install Package"
 msgstr ""
 "\n"
 "            "
@@ -1395,8 +1563,8 @@ msgstr "Configurações..."
 msgid "About..."
 msgstr "Sobre..."
 
-#. (obsolete)
 #: MainWindow#38
+#, fuzzy
 msgctxt "MainWindow#38"
 msgid "Update Database"
 msgstr "Atualizar base de dados"
@@ -1418,8 +1586,8 @@ msgstr "Atualizar árvore ABS"
 msgid "Build and Install Queue"
 msgstr "Construir e instalar pacotes"
 
-#. (obsolete)
 #: MainWindow#43
+#, fuzzy
 msgctxt "MainWindow#43"
 msgid "Process Queue"
 msgstr "Aplicar"
@@ -1999,6 +2167,75 @@ msgstr ""
 "\n"
 "            "
 
+#: MainWindow#134
+#, fuzzy
+msgctxt "MainWindow#134"
+msgid ""
+"%1 requires installing %2 from IgnorePkg/IgnoreGroup.\n"
+" Install anyway?"
+msgstr ""
+"%1 requer a instalação de %2 de IgnorePkg/IgnoreGroup.\n"
+" Instalar mesmo assim?"
+
+#: MainWindow#135
+#, fuzzy
+msgctxt "MainWindow#135"
+msgid ""
+"%1 is in IgnorePkg/IgnoreGroup.\n"
+" Install anyway?"
+msgstr ""
+"%1 está em IgnorePkg/IgnoreGroup.\n"
+"Instalar mesmo assim?"
+
+#: MainWindow#136
+#, fuzzy
+msgctxt "MainWindow#136"
+msgid "Replace %1 with %2/%3?"
+msgstr "Substituir %1 por %2/%3?"
+
+#: MainWindow#137
+msgid ""
+"%1 conflicts with %2.\n"
+"Remove %2?"
+msgstr ""
+
+#: MainWindow#138
+#, fuzzy
+msgid ""
+"The following package(s) cannot be upgraded due to unresolvable "
+"dependencies:\n"
+"%1\n"
+"\n"
+"Do you want to skip the above package(s) for this upgrade?"
+msgstr ""
+"\n"
+"            \n"
+"        "
+
+#: MainWindow#139
+#, fuzzy
+msgctxt "MainWindow#139"
+msgid ""
+"%1-%2: local version is newer.\n"
+"Upgrade anyway?"
+msgstr ""
+"%1-%2: versão local é mais nova.\n"
+"Atualizar mesmo assim?"
+
+#: MainWindow#140
+#, fuzzy
+msgctxt "MainWindow#140"
+msgid ""
+"File %1 is corrupted.\n"
+"Do you want to delete it?"
+msgstr ""
+"Arquivo %1 está corrompido.\n"
+"Deseja removê-lo?"
+
+#: MainWindow#141
+msgid "Transaction Question"
+msgstr ""
+
 #: MaintenanceBar#1
 #, fuzzy
 msgid "Please choose an action to start maintenance..."
@@ -2054,8 +2291,8 @@ msgctxt "MaintenanceBar#9"
 msgid "Deleting Cache..."
 msgstr "Deletando cache..."
 
-#. (obsolete)
 #: MaintenanceBar#10
+#, fuzzy
 msgctxt "MaintenanceBar#10"
 msgid "Optimizing Pacman Database..."
 msgstr "Otimizando base de dados do Pacman..."
@@ -2186,6 +2423,16 @@ msgstr ""
 "\n"
 "            "
 
+#: MaintenanceBar#31
+msgctxt "MaintenanceBar#31"
+msgid "Database optimized successfully!"
+msgstr ""
+
+#: MaintenanceBar#32
+msgctxt "MaintenanceBar#32"
+msgid "Could not optimize database!"
+msgstr ""
+
 #: NewsViewer#1
 msgid "Please wait, fetching items..."
 msgstr "Por favor aguarde, buscando itens..."
@@ -2311,6 +2558,7 @@ msgstr ""
 "Suas configurações não podem ser gravadas.\n"
 "Verifique suas permissões."
 
+#. (obsolete)
 #: QObject#11
 msgid ""
 "You have started Shaman as root.\n"
@@ -2351,6 +2599,7 @@ msgstr ""
 "Parece que há outra instância do Shaman em execução.\n"
 "Você pode executar apenas uma instância do Shaman."
 
+#. (obsolete)
 #: QObject#17
 msgid ""
 "Shaman can not be started as root.\n"
@@ -2399,6 +2648,11 @@ msgstr "C&ancelar"
 #: QObject#24
 msgid "Whoa, that's co&ol!"
 msgstr "Uau, isto é le&gal!"
+
+#: QObject#25
+msgid ""
+"Shaman can not be started as root. Please restart it as unprivileged user."
+msgstr ""
 
 #: QueueDialog#1
 msgid "<br><b> * Validating Transaction</b><br>"
@@ -2493,6 +2747,7 @@ msgid "Starting downloading packages from %1..."
 msgstr "Iniciando download de pacotes de %1..."
 
 # You just have to translate 'remaining' here. Leave everything else as it is.
+#. (obsolete)
 #: QueueDialog#24
 msgid "%p% (%1 KB/s, %4:%5:%6 remaining)"
 msgstr "%p% (%1 KB/s, %4:%5:%6 restando)"
@@ -2544,10 +2799,12 @@ msgctxt "QueueDialog#34"
 msgid "Queue Processing"
 msgstr "Processando ações"
 
+#. (obsolete)
 #: QueueDialog#35
 msgid "There has been an error while preparing the transaction.\n"
 msgstr "Houve um erro na preparação da transação.\n"
 
+#. (obsolete)
 #: QueueDialog#36
 msgid "There has been an error while committing the transaction.\n"
 msgstr "Houve um erro no processamento da transação.\n"
@@ -2572,6 +2829,15 @@ msgstr "Processamento da ação falhou!"
 #: QueueDialog#40
 msgid "Queue processed successfully!"
 msgstr "Ação processada com sucesso!"
+
+#: QueueDialog#41
+msgid "Running package scripts..."
+msgstr ""
+
+# You just have to translate 'remaining' here. Leave everything else as it is.
+#: QueueDialog#42
+msgid "%p% (%1 KB/s, %2 remaining)"
+msgstr ""
 
 #: QueueReadyDialog#1
 msgid "Review Queue"
@@ -2716,14 +2982,16 @@ msgstr "<b>%1</b> será liberado"
 msgid "Remove <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #: ReviewQueueDialog#17
 #, fuzzy
 msgid "Install/Upgrade <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #: ShamanStatusBar#1
 msgid "%1 Available Packages, %2 Installed Packages, %3 Upgradeable Packages"
@@ -2831,7 +3099,8 @@ msgid ""
 "Click here to upgrade your System."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #. (obsolete)
 #: SysUpgradeDialog#1
@@ -2863,7 +3132,13 @@ msgid ""
 "add it to the current Queue<br> and process it later."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
+
+#: SysUpgradeDialog#5
+msgctxt "SysUpgradeDialog#5"
+msgid "System Upgrade"
+msgstr ""
 
 #: aboutDialog#1
 msgid "About Shaman"
