--- a/translations/ru/shaman_ru.po
+++ b/translations/ru/shaman_ru.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-08-22 01:34+0200\n"
+"POT-Creation-Date: 2009-08-22 02:01+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -24,6 +24,7 @@ msgstr ": конфликтует с"
 
 #. (obsolete)
 #: AlpmHandler#3
+msgctxt "AlpmHandler#3"
 msgid "%1 exists in both '%2' and '%3'"
 msgstr "%1 содержится в '%2' и в '%3'"
 
@@ -240,10 +241,12 @@ msgid ""
 "configuration to improve your building performance."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #. (obsolete)
 #: CallBacks#1
+msgctxt "CallBacks#1"
 msgid ""
 "%1 requires installing %2 from IgnorePkg/IgnoreGroup.\n"
 " Install anyway?"
@@ -253,6 +256,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#2
+msgctxt "CallBacks#2"
 msgid ""
 "%1 is in IgnorePkg/IgnoreGroup.\n"
 " Install anyway?"
@@ -271,6 +275,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#4
+msgctxt "CallBacks#4"
 msgid "Replace %1 with %2/%3?"
 msgstr "Заменить %1 на %2/%3?"
 
@@ -285,6 +290,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#6
+msgctxt "CallBacks#6"
 msgid ""
 "%1-%2: local version is newer.\n"
 "Upgrade anyway?"
@@ -294,6 +300,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#7
+msgctxt "CallBacks#7"
 msgid ""
 "File %1 is corrupted.\n"
 "Do you want to delete it?"
@@ -733,8 +740,8 @@ msgstr "Не удалось выполнить Sync!"
 msgid "Process Selected"
 msgstr "Выполнить выбранное"
 
-#. (obsolete)
 #: ConfigDialog#90
+#, fuzzy
 msgctxt "ConfigDialog#90"
 msgid "Optimizing Pacman Database..."
 msgstr "Оптимизация базы данных Pacman..."
@@ -878,6 +885,7 @@ msgstr "Запретить запуск Shaman от имени root"
 msgid "Saving Configuration"
 msgstr "Сохранение настроек"
 
+#. (obsolete)
 #: ConfigDialog#119
 msgid "Unable to save Pacman configuration!"
 msgstr "Невозможно сохранить настройки Pacman!"
@@ -910,6 +918,7 @@ msgstr ""
 "необходимо освободить alpm. Перезапустите\n"
 "Shaman, чтобы изменения вступили в силу."
 
+#. (obsolete)
 #: ConfigDialog#123
 msgid ""
 "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
@@ -1016,6 +1025,49 @@ msgstr ""
 "\n"
 "            "
 
+#: ConfigDialog#137
+msgctxt "ConfigDialog#137"
+msgid "Database optimized successfully!"
+msgstr ""
+
+#: ConfigDialog#138
+msgctxt "ConfigDialog#138"
+msgid "Could not optimize database!"
+msgstr ""
+
+#: ConfigDialog#139
+msgid "Error saving configuration"
+msgstr ""
+
+#: ConfigDialog#140
+msgid ""
+"There was an error while saving the configuration. This is probably due to "
+"an internal error or you being not authorized to perform the operation"
+msgstr ""
+
+#: ConfigDialog#141
+msgid ""
+"There was an error while trying to add the mirror! This could be due also to "
+"your system policy preventing you from performing this action"
+msgstr ""
+
+#: ConfigDialog#142
+msgid ""
+"<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
+"html40/strict.dtd\">\n"
+"<html><head><meta name=\"qrichtext\" content=\"1\" /><style type=\"text/css\">\n"
+"p, li { white-space: pre-wrap; }\n"
+"</style></head><body style=\" font-family:'Liberation Serif'; font-size:10pt; "
+"font-weight:400; font-style:normal;\">\n"
+"<p style=\" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-"
+"right:0px; -qt-block-indent:0; text-indent:0px;\"><span style=\" font-"
+"family:'Liberation Sans'; font-size:9pt;\">Shaman Manteinance.</span></p>\n"
+"<p style=\" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-"
+"right:0px; -qt-block-indent:0; text-indent:0px;\"><span style=\" font-"
+"family:'Liberation Sans'; font-size:9pt;\">Please choose an action from the "
+"Drop-Down Menu.</span></p></body></html>"
+msgstr ""
+
 #: EditPBuild#1
 msgid "Saving"
 msgstr "Сохранение"
@@ -1027,6 +1079,112 @@ msgid ""
 msgstr ""
 "PKGBUILD изменен.\n"
 "Сохранить его?"
+
+#: ErrorHandler#1
+msgid "There has been an error while preparing the transaction."
+msgstr ""
+
+#: ErrorHandler#2
+msgid "Some dependencies can not be satisfied"
+msgstr ""
+
+#: ErrorHandler#3
+msgid "%1: requires %2"
+msgstr ""
+
+#: ErrorHandler#4
+msgid "Some dependencies create a conflict with already installed packages"
+msgstr ""
+
+#: ErrorHandler#5
+msgid "%1: conflicts with %2"
+msgstr ""
+
+#: ErrorHandler#6
+msgid "No further details were given. Last error string was:"
+msgstr ""
+
+#: ErrorHandler#7
+msgid "There has been an error while committing the transaction."
+msgstr ""
+
+#: ErrorHandler#8
+msgid "Some files in the packages being processed are conflicting"
+msgstr ""
+
+#: ErrorHandler#9
+#, fuzzy
+msgctxt "ErrorHandler#9"
+msgid "%1 exists in both '%2' and '%3'"
+msgstr "%1 содержится в '%2' и в '%3'"
+
+#: ErrorHandler#10
+msgid ""
+"Some files in the packages being processed conflict with the local "
+"filesystem"
+msgstr ""
+
+#: ErrorHandler#11
+msgid "%1: %2 exists in the filesystem"
+msgstr ""
+
+#: ErrorHandler#12
+msgid "Some downloaded packages are corrupted or invalid"
+msgstr ""
+
+#: ErrorHandler#13
+msgid "%1 is invalid or corrupted"
+msgstr ""
+
+#: ErrorHandler#14
+msgid "There has been an error while adding a target."
+msgstr ""
+
+#: ErrorHandler#15
+msgid ""
+"This is probably an internal Shaman error. Please report it to help the "
+"developers solving it"
+msgstr ""
+
+#: ErrorHandler#16
+msgid "You seem not authorized to perform this operation"
+msgstr ""
+
+#: ErrorHandler#17
+msgid ""
+"It looks like the system policy prevents you from doing this action, or you "
+"failed or refused to authenticate. Please contact your system administrator "
+"for further details"
+msgstr ""
+
+#: ErrorHandler#18
+msgid "There was a problem initialiting Aqpm"
+msgstr ""
+
+#: ErrorHandler#19
+msgid ""
+"Aqpm, the library underneath Shaman, reported that it could not start a "
+"privileged operation. This is probably due to a bug in Shaman/Aqpm or to a "
+"misconfiguration of your system"
+msgstr ""
+
+#: ErrorHandler#20
+msgid "There was an error during the transaction"
+msgstr ""
+
+#: ErrorHandler#21
+msgid ""
+"It looks like Aqpm's worker crashed or disappeared. This is probably an "
+"internal Shaman error. Please report it to help the developers solving it"
+msgstr ""
+
+#: ErrorHandler#22
+msgid "The transaction was interrupted"
+msgstr ""
+
+#: ErrorHandler#23
+msgid "Error occurred"
+msgstr ""
 
 #: LocalPackage#1
 #, fuzzy
@@ -1073,6 +1231,7 @@ msgstr "Отмена"
 
 #: LocalPackage#6
 #, fuzzy
+msgctxt "LocalPackage#6"
 msgid "Install Package"
 msgstr ""
 "\n"
@@ -1102,6 +1261,15 @@ msgstr ""
 #: LocalPackageDialog#4
 #, fuzzy
 msgid "%n package(s) will be installed as dependencies"
+msgstr ""
+"\n"
+"            \n"
+"        "
+
+#: LocalPackageDialog#5
+#, fuzzy
+msgctxt "LocalPackageDialog#5"
+msgid "Install Package"
 msgstr ""
 "\n"
 "            "
@@ -1223,8 +1391,8 @@ msgstr "Настройки..."
 msgid "About..."
 msgstr "О программе..."
 
-#. (obsolete)
 #: MainWindow#28
+#, fuzzy
 msgctxt "MainWindow#28"
 msgid "Update Database"
 msgstr "Обновить базу данных"
@@ -1246,8 +1414,8 @@ msgstr "Обновить дерево ABS"
 msgid "Build and Install Queue"
 msgstr "Собрать устанавливаемые пакеты"
 
-#. (obsolete)
 #: MainWindow#33
+#, fuzzy
 msgctxt "MainWindow#33"
 msgid "Process Queue"
 msgstr "Выполнить очередь"
@@ -1281,6 +1449,7 @@ msgstr "Обновить"
 
 #: MainWindow#38
 msgctxt "MainWindow#38"
+"MainWindow#38"
 "MainWindow#38"
 msgid "System Upgrade"
 msgstr "Обновить систему"
@@ -1653,6 +1822,75 @@ msgstr ""
 "\n"
 "            "
 
+#: MainWindow#104
+#, fuzzy
+msgctxt "MainWindow#104"
+msgid ""
+"%1 requires installing %2 from IgnorePkg/IgnoreGroup.\n"
+" Install anyway?"
+msgstr ""
+"%1 требует установки %2 из игнорируемых пакетов\n"
+"или групп. Все равно установить?"
+
+#: MainWindow#105
+#, fuzzy
+msgctxt "MainWindow#105"
+msgid ""
+"%1 is in IgnorePkg/IgnoreGroup.\n"
+" Install anyway?"
+msgstr ""
+"%1 - игнорируемый пакет, или в игнорируемой\n"
+"группе. Все равно установить?"
+
+#: MainWindow#106
+#, fuzzy
+msgctxt "MainWindow#106"
+msgid "Replace %1 with %2/%3?"
+msgstr "Заменить %1 на %2/%3?"
+
+#: MainWindow#107
+msgid ""
+"%1 conflicts with %2.\n"
+"Remove %2?"
+msgstr ""
+
+#: MainWindow#108
+#, fuzzy
+msgid ""
+"The following package(s) cannot be upgraded due to unresolvable "
+"dependencies:\n"
+"%1\n"
+"\n"
+"Do you want to skip the above package(s) for this upgrade?"
+msgstr ""
+"\n"
+"            \n"
+"        "
+
+#: MainWindow#109
+#, fuzzy
+msgctxt "MainWindow#109"
+msgid ""
+"%1-%2: local version is newer.\n"
+"Upgrade anyway?"
+msgstr ""
+"%1-%2: локальная версия более нова.\n"
+"Все равно обновить?"
+
+#: MainWindow#110
+#, fuzzy
+msgctxt "MainWindow#110"
+msgid ""
+"File %1 is corrupted.\n"
+"Do you want to delete it?"
+msgstr ""
+"Файл %1 поврежден.\n"
+"Удалить его?"
+
+#: MainWindow#111
+msgid "Transaction Question"
+msgstr ""
+
 #: MaintenanceBar#1
 #, fuzzy
 msgid "Please choose an action to start maintenance..."
@@ -1708,8 +1946,8 @@ msgctxt "MaintenanceBar#9"
 msgid "Deleting Cache..."
 msgstr "Удаление содержимого кэша..."
 
-#. (obsolete)
 #: MaintenanceBar#10
+#, fuzzy
 msgctxt "MaintenanceBar#10"
 msgid "Optimizing Pacman Database..."
 msgstr "Оптимизация базы данных Pacman..."
@@ -1840,6 +2078,16 @@ msgstr ""
 "\n"
 "            "
 
+#: MaintenanceBar#31
+msgctxt "MaintenanceBar#31"
+msgid "Database optimized successfully!"
+msgstr ""
+
+#: MaintenanceBar#32
+msgctxt "MaintenanceBar#32"
+msgid "Could not optimize database!"
+msgstr ""
+
 #: NewsViewer#1
 msgid "Please wait, fetching items..."
 msgstr "Подождите, загрузка сообщений..."
@@ -1953,6 +2201,7 @@ msgstr ""
 "Файл настроек недоступен для записи.\n"
 "Проверьте права доступа на него."
 
+#. (obsolete)
 #: QObject#10
 msgid ""
 "You have started Shaman as root.\n"
@@ -1977,6 +2226,7 @@ msgstr ""
 "Похоже, уже запущена копия Shaman.\n"
 "В один момент времени не может работать более одной копии."
 
+#. (obsolete)
 #: QObject#13
 msgid ""
 "Shaman can not be started as root.\n"
@@ -2025,6 +2275,11 @@ msgstr "&Отмена"
 #: QObject#20
 msgid "Whoa, that's co&ol!"
 msgstr "Ух ты, круто!"
+
+#: QObject#21
+msgid ""
+"Shaman can not be started as root. Please restart it as unprivileged user."
+msgstr ""
 
 #: QueueDialog#1
 msgid "<br><b> * Validating Transaction</b><br>"
@@ -2120,6 +2375,7 @@ msgid "Starting downloading packages from %1..."
 msgstr "Начато скачивание пакетов из %1..."
 
 # You just have to translate 'remaining' here. Leave everything else as it is.
+#. (obsolete)
 #: QueueDialog#24
 msgid "%p% (%1 KB/s, %4:%5:%6 remaining)"
 msgstr "%p% (%1 KB/s, осталось %4:%5:%6)"
@@ -2171,10 +2427,12 @@ msgctxt "QueueDialog#34"
 msgid "Queue Processing"
 msgstr "Выполнение очереди"
 
+#. (obsolete)
 #: QueueDialog#35
 msgid "There has been an error while preparing the transaction.\n"
 msgstr "Произошла ошибка при подготовке транзакции.\n"
 
+#. (obsolete)
 #: QueueDialog#36
 msgid "There has been an error while committing the transaction.\n"
 msgstr "Произошла ошибка при завершении транзакции.\n"
@@ -2199,6 +2457,15 @@ msgstr "Ошибка обработки очереди!"
 #: QueueDialog#40
 msgid "Queue processed successfully!"
 msgstr "Очередь успешно выполнена!"
+
+#: QueueDialog#41
+msgid "Running package scripts..."
+msgstr ""
+
+# You just have to translate 'remaining' here. Leave everything else as it is.
+#: QueueDialog#42
+msgid "%p% (%1 KB/s, %2 remaining)"
+msgstr ""
 
 #: QueueReadyDialog#1
 msgid "Review Queue"
@@ -2337,14 +2604,16 @@ msgstr "Будет освобождено <b>%1</b>"
 msgid "Remove <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #: ReviewQueueDialog#17
 #, fuzzy
 msgid "Install/Upgrade <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #: ShamanStatusBar#1
 msgid "%1 Available Packages, %2 Installed Packages, %3 Upgradeable Packages"
@@ -2452,7 +2721,8 @@ msgid ""
 "Click here to upgrade your System."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #. (obsolete)
 #: SysUpgradeDialog#1
@@ -2484,7 +2754,13 @@ msgid ""
 "add it to the current Queue<br> and process it later."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
+
+#: SysUpgradeDialog#5
+msgctxt "SysUpgradeDialog#5"
+msgid "System Upgrade"
+msgstr ""
 
 #: aboutDialog#1
 msgid "About Shaman"
