--- a/translations/lt/shaman_lt.po
+++ b/translations/lt/shaman_lt.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-08-22 01:34+0200\n"
+"POT-Creation-Date: 2009-08-22 02:01+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,6 +29,7 @@ msgstr "Alpm nedavė tolimesnių detalių."
 
 #. (obsolete)
 #: AlpmHandler#4
+msgctxt "AlpmHandler#4"
 msgid "%1 exists in both '%2' and '%3'"
 msgstr "%1 egzistuoja ir '%2' ir '%3'"
 
@@ -238,10 +239,12 @@ msgid ""
 "configuration to improve your building performance."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #. (obsolete)
 #: CallBacks#1
+msgctxt "CallBacks#1"
 msgid ""
 "%1 requires installing %2 from IgnorePkg/IgnoreGroup.\n"
 " Install anyway?"
@@ -251,6 +254,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#2
+msgctxt "CallBacks#2"
 msgid ""
 "%1 is in IgnorePkg/IgnoreGroup.\n"
 " Install anyway?"
@@ -269,6 +273,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#4
+msgctxt "CallBacks#4"
 msgid "Replace %1 with %2/%3?"
 msgstr "Pakeisti %1 į %2/%3?"
 
@@ -283,6 +288,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#6
+msgctxt "CallBacks#6"
 msgid ""
 "%1-%2: local version is newer.\n"
 "Upgrade anyway?"
@@ -292,6 +298,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#7
+msgctxt "CallBacks#7"
 msgid ""
 "File %1 is corrupted.\n"
 "Do you want to delete it?"
@@ -376,8 +383,8 @@ msgctxt "ConfigDialog#17"
 msgid "Deleting Cache..."
 msgstr "Ištrinamos atsargos..."
 
-#. (obsolete)
 #: ConfigDialog#18
+#, fuzzy
 msgctxt "ConfigDialog#18"
 msgid "Optimizing Pacman Database..."
 msgstr "Optimizuojamos „Pacman“ duomenų bazės"
@@ -431,6 +438,7 @@ msgstr "Statymo aplinkos sėkmingai išvalytos!"
 msgid "Saving Configuration"
 msgstr "Išsaugomi nustatymai"
 
+#. (obsolete)
 #: ConfigDialog#29
 msgid "Unable to save Pacman configuration!"
 msgstr "Neįmanoma išsaugoti „Pacman“ nustatymų!"
@@ -597,6 +605,7 @@ msgstr "Išrinktas procesas"
 msgid "Waiting"
 msgstr "Laukiama"
 
+#. (obsolete)
 #: ConfigDialog#59
 msgid ""
 "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
@@ -1046,6 +1055,49 @@ msgstr ""
 "\n"
 "            "
 
+#: ConfigDialog#139
+msgctxt "ConfigDialog#139"
+msgid "Database optimized successfully!"
+msgstr ""
+
+#: ConfigDialog#140
+msgctxt "ConfigDialog#140"
+msgid "Could not optimize database!"
+msgstr ""
+
+#: ConfigDialog#141
+msgid "Error saving configuration"
+msgstr ""
+
+#: ConfigDialog#142
+msgid ""
+"There was an error while saving the configuration. This is probably due to "
+"an internal error or you being not authorized to perform the operation"
+msgstr ""
+
+#: ConfigDialog#143
+msgid ""
+"There was an error while trying to add the mirror! This could be due also to "
+"your system policy preventing you from performing this action"
+msgstr ""
+
+#: ConfigDialog#144
+msgid ""
+"<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
+"html40/strict.dtd\">\n"
+"<html><head><meta name=\"qrichtext\" content=\"1\" /><style type=\"text/css\">\n"
+"p, li { white-space: pre-wrap; }\n"
+"</style></head><body style=\" font-family:'Liberation Serif'; font-size:10pt; "
+"font-weight:400; font-style:normal;\">\n"
+"<p style=\" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-"
+"right:0px; -qt-block-indent:0; text-indent:0px;\"><span style=\" font-"
+"family:'Liberation Sans'; font-size:9pt;\">Shaman Manteinance.</span></p>\n"
+"<p style=\" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-"
+"right:0px; -qt-block-indent:0; text-indent:0px;\"><span style=\" font-"
+"family:'Liberation Sans'; font-size:9pt;\">Please choose an action from the "
+"Drop-Down Menu.</span></p></body></html>"
+msgstr ""
+
 #: EditPBuild#1
 msgid "Saving"
 msgstr "Išsaugoma"
@@ -1055,6 +1107,112 @@ msgid ""
 "You modified this PKGBUILD.\n"
 "Do you want to save it?"
 msgstr "Jūs redagavote PKGBUILD. Ar norite išsaugoti?"
+
+#: ErrorHandler#1
+msgid "There has been an error while preparing the transaction."
+msgstr ""
+
+#: ErrorHandler#2
+msgid "Some dependencies can not be satisfied"
+msgstr ""
+
+#: ErrorHandler#3
+msgid "%1: requires %2"
+msgstr ""
+
+#: ErrorHandler#4
+msgid "Some dependencies create a conflict with already installed packages"
+msgstr ""
+
+#: ErrorHandler#5
+msgid "%1: conflicts with %2"
+msgstr ""
+
+#: ErrorHandler#6
+msgid "No further details were given. Last error string was:"
+msgstr ""
+
+#: ErrorHandler#7
+msgid "There has been an error while committing the transaction."
+msgstr ""
+
+#: ErrorHandler#8
+msgid "Some files in the packages being processed are conflicting"
+msgstr ""
+
+#: ErrorHandler#9
+#, fuzzy
+msgctxt "ErrorHandler#9"
+msgid "%1 exists in both '%2' and '%3'"
+msgstr "%1 egzistuoja ir '%2' ir '%3'"
+
+#: ErrorHandler#10
+msgid ""
+"Some files in the packages being processed conflict with the local "
+"filesystem"
+msgstr ""
+
+#: ErrorHandler#11
+msgid "%1: %2 exists in the filesystem"
+msgstr ""
+
+#: ErrorHandler#12
+msgid "Some downloaded packages are corrupted or invalid"
+msgstr ""
+
+#: ErrorHandler#13
+msgid "%1 is invalid or corrupted"
+msgstr ""
+
+#: ErrorHandler#14
+msgid "There has been an error while adding a target."
+msgstr ""
+
+#: ErrorHandler#15
+msgid ""
+"This is probably an internal Shaman error. Please report it to help the "
+"developers solving it"
+msgstr ""
+
+#: ErrorHandler#16
+msgid "You seem not authorized to perform this operation"
+msgstr ""
+
+#: ErrorHandler#17
+msgid ""
+"It looks like the system policy prevents you from doing this action, or you "
+"failed or refused to authenticate. Please contact your system administrator "
+"for further details"
+msgstr ""
+
+#: ErrorHandler#18
+msgid "There was a problem initialiting Aqpm"
+msgstr ""
+
+#: ErrorHandler#19
+msgid ""
+"Aqpm, the library underneath Shaman, reported that it could not start a "
+"privileged operation. This is probably due to a bug in Shaman/Aqpm or to a "
+"misconfiguration of your system"
+msgstr ""
+
+#: ErrorHandler#20
+msgid "There was an error during the transaction"
+msgstr ""
+
+#: ErrorHandler#21
+msgid ""
+"It looks like Aqpm's worker crashed or disappeared. This is probably an "
+"internal Shaman error. Please report it to help the developers solving it"
+msgstr ""
+
+#: ErrorHandler#22
+msgid "The transaction was interrupted"
+msgstr ""
+
+#: ErrorHandler#23
+msgid "Error occurred"
+msgstr ""
 
 #: LocalPackage#1
 #, fuzzy
@@ -1101,6 +1259,7 @@ msgstr "Atšaukti"
 
 #: LocalPackage#6
 #, fuzzy
+msgctxt "LocalPackage#6"
 msgid "Install Package"
 msgstr ""
 "\n"
@@ -1130,6 +1289,15 @@ msgstr ""
 #: LocalPackageDialog#4
 #, fuzzy
 msgid "%n package(s) will be installed as dependencies"
+msgstr ""
+"\n"
+"            \n"
+"        "
+
+#: LocalPackageDialog#5
+#, fuzzy
+msgctxt "LocalPackageDialog#5"
+msgid "Install Package"
 msgstr ""
 "\n"
 "            "
@@ -1601,8 +1769,8 @@ msgstr "Nustatymai..."
 msgid "About..."
 msgstr "Apie..."
 
-#. (obsolete)
 #: MainWindow#93
+#, fuzzy
 msgctxt "MainWindow#93"
 msgid "Update Database"
 msgstr "Atnaujinti duomenų bazę"
@@ -1630,8 +1798,8 @@ msgctxt "MainWindow#98"
 msgid "Quit"
 msgstr "Išeiti"
 
-#. (obsolete)
 #: MainWindow#99
+#, fuzzy
 msgctxt "MainWindow#99"
 msgid "Process Queue"
 msgstr "Procesų eilė"
@@ -1650,6 +1818,73 @@ msgid "Name and Description"
 msgstr ""
 "\n"
 "            "
+
+#: MainWindow#103
+#, fuzzy
+msgctxt "MainWindow#103"
+msgid ""
+"%1 requires installing %2 from IgnorePkg/IgnoreGroup.\n"
+" Install anyway?"
+msgstr ""
+"%1 reikalingas įrašymas %2 iš 'IgnorePkg/Ignore' grų“ėue.\n"
+"Vistiek įdiekti?"
+
+#: MainWindow#104
+#, fuzzy
+msgctxt "MainWindow#104"
+msgid ""
+"%1 is in IgnorePkg/IgnoreGroup.\n"
+" Install anyway?"
+msgstr ""
+"%1 yra 'IgnorePkg/Ignore' grupėje.\n"
+"Vistiek įdiekti?"
+
+#: MainWindow#105
+#, fuzzy
+msgctxt "MainWindow#105"
+msgid "Replace %1 with %2/%3?"
+msgstr "Pakeisti %1 į %2/%3?"
+
+#: MainWindow#106
+msgid ""
+"%1 conflicts with %2.\n"
+"Remove %2?"
+msgstr ""
+
+#: MainWindow#107
+#, fuzzy
+msgid ""
+"The following package(s) cannot be upgraded due to unresolvable "
+"dependencies:\n"
+"%1\n"
+"\n"
+"Do you want to skip the above package(s) for this upgrade?"
+msgstr ""
+"\n"
+"            \n"
+"        "
+
+#: MainWindow#108
+#, fuzzy
+msgctxt "MainWindow#108"
+msgid ""
+"%1-%2: local version is newer.\n"
+"Upgrade anyway?"
+msgstr ""
+"%1-%2: vietinė versija naujesnė.\n"
+"Vistiek atnaujinti?"
+
+#: MainWindow#109
+#, fuzzy
+msgctxt "MainWindow#109"
+msgid ""
+"File %1 is corrupted.\n"
+"Do you want to delete it?"
+msgstr "%1 rinkmena yra sugadinta. Ar norite ištrinti?"
+
+#: MainWindow#110
+msgid "Transaction Question"
+msgstr ""
 
 #: MaintenanceBar#1
 #, fuzzy
@@ -1706,8 +1941,8 @@ msgctxt "MaintenanceBar#9"
 msgid "Deleting Cache..."
 msgstr "Ištrinamos atsargos..."
 
-#. (obsolete)
 #: MaintenanceBar#10
+#, fuzzy
 msgctxt "MaintenanceBar#10"
 msgid "Optimizing Pacman Database..."
 msgstr "Optimizuojamos „Pacman“ duomenų bazės"
@@ -1842,6 +2077,16 @@ msgid "Maintenance Actions"
 msgstr ""
 "\n"
 "            "
+
+#: MaintenanceBar#31
+msgctxt "MaintenanceBar#31"
+msgid "Database optimized successfully!"
+msgstr ""
+
+#: MaintenanceBar#32
+msgctxt "MaintenanceBar#32"
+msgid "Could not optimize database!"
+msgstr ""
 
 #: NewsViewer#1
 msgid "Please wait, fetching items..."
@@ -1998,6 +2243,7 @@ msgctxt "QObject#14"
 msgid "Please Wait..."
 msgstr "Prašome palaukti..."
 
+#. (obsolete)
 #: QObject#15
 msgid ""
 "Shaman can not be started as root.\n"
@@ -2006,6 +2252,7 @@ msgstr ""
 "„Shaman“ negali būti pradėtas kaip root.\n"
 "Prašome perkrauti į paprastą vartotoją."
 
+#. (obsolete)
 #: QObject#16
 msgid ""
 "You have started Shaman as root.\n"
@@ -2037,6 +2284,11 @@ msgstr "Įkeliami paketai"
 #: QObject#20
 msgid "Starting up Shaman..."
 msgstr "Pradedamas „Shaman“..."
+
+#: QObject#21
+msgid ""
+"Shaman can not be started as root. Please restart it as unprivileged user."
+msgstr ""
 
 #: QueueDialog#1
 msgid "<br><b> * Validating Transaction</b><br>"
@@ -2131,6 +2383,7 @@ msgid "Starting downloading packages from %1..."
 msgstr "Pradedama siųsti paketus iš %1..."
 
 # You just have to translate 'remaining' here. Leave everything else as it is.
+#. (obsolete)
 #: QueueDialog#24
 msgid "%p% (%1 KB/s, %4:%5:%6 remaining)"
 msgstr "%p% (%1 KB/s, liko %4:%5:%6)"
@@ -2203,13 +2456,24 @@ msgstr ""
 "Ar norite atšaukti eilės vykdymą?\n"
 "Tai gali pakenkti jūsų sistemai."
 
+#. (obsolete)
 #: QueueDialog#39
 msgid "There has been an error while preparing the transaction.\n"
 msgstr "Įvyko klaida paruošiant sandorį."
 
+#. (obsolete)
 #: QueueDialog#40
 msgid "There has been an error while committing the transaction.\n"
 msgstr "Įvyko klaida, pavedant sandorį."
+
+#: QueueDialog#41
+msgid "Running package scripts..."
+msgstr ""
+
+# You just have to translate 'remaining' here. Leave everything else as it is.
+#: QueueDialog#42
+msgid "%p% (%1 KB/s, %2 remaining)"
+msgstr ""
 
 #: QueueReadyDialog#1
 msgid "Review Queue"
@@ -2347,14 +2611,16 @@ msgstr "Ar norite tęsti?"
 msgid "Remove <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #: ReviewQueueDialog#17
 #, fuzzy
 msgid "Install/Upgrade <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #: ShamanStatusBar#1
 msgid "%1 Available Packages, %2 Installed Packages, %3 Upgradeable Packages"
@@ -2462,7 +2728,8 @@ msgid ""
 "Click here to upgrade your System."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #. (obsolete)
 #: SysUpgradeDialog#1
@@ -2494,7 +2761,14 @@ msgid ""
 "add it to the current Queue<br> and process it later."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
+
+#: SysUpgradeDialog#5
+#, fuzzy
+msgctxt "SysUpgradeDialog#5"
+msgid "System Upgrade"
+msgstr "Sistemos atnaujinimas"
 
 #: aboutDialog#1
 msgid "About Shaman"
