--- a/translations/nl/shaman_nl.po
+++ b/translations/nl/shaman_nl.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-08-22 01:34+0200\n"
+"POT-Creation-Date: 2009-08-22 02:01+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,6 +29,7 @@ msgstr "Alpm geeft geen verdere details."
 
 #. (obsolete)
 #: AlpmHandler#4
+msgctxt "AlpmHandler#4"
 msgid "%1 exists in both '%2' and '%3'"
 msgstr "%1 bestaat zowel in '%2' en '%3'"
 
@@ -240,10 +241,12 @@ msgid ""
 "configuration to improve your building performance."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #. (obsolete)
 #: CallBacks#1
+msgctxt "CallBacks#1"
 msgid ""
 "%1 requires installing %2 from IgnorePkg/IgnoreGroup.\n"
 " Install anyway?"
@@ -253,6 +256,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#2
+msgctxt "CallBacks#2"
 msgid ""
 "%1 is in IgnorePkg/IgnoreGroup.\n"
 " Install anyway?"
@@ -271,6 +275,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#4
+msgctxt "CallBacks#4"
 msgid "Replace %1 with %2/%3?"
 msgstr "%1 vervangen door %2/%3?"
 
@@ -285,6 +290,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#6
+msgctxt "CallBacks#6"
 msgid ""
 "%1-%2: local version is newer.\n"
 "Upgrade anyway?"
@@ -294,6 +300,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#7
+msgctxt "CallBacks#7"
 msgid ""
 "File %1 is corrupted.\n"
 "Do you want to delete it?"
@@ -380,8 +387,8 @@ msgctxt "ConfigDialog#17"
 msgid "Deleting Cache..."
 msgstr "Cache wordt verwijderd..."
 
-#. (obsolete)
 #: ConfigDialog#18
+#, fuzzy
 msgctxt "ConfigDialog#18"
 msgid "Optimizing Pacman Database..."
 msgstr "Pacman-database wordt geoptimaliseerd..."
@@ -435,6 +442,7 @@ msgstr "Bouwomgevingen succesvol opgeruimd."
 msgid "Saving Configuration"
 msgstr "Configuratie wordt opgeslagen"
 
+#. (obsolete)
 #: ConfigDialog#29
 msgid "Unable to save Pacman configuration!"
 msgstr "Kon de Pacman-instellingen niet opslaan."
@@ -601,6 +609,7 @@ msgstr "Proces geselecteerd"
 msgid "Waiting"
 msgstr "Aan het wachten"
 
+#. (obsolete)
 #: ConfigDialog#59
 msgid ""
 "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
@@ -1017,6 +1026,49 @@ msgstr "De volgende taal gebruiken:"
 msgid "Disable Tray Icon"
 msgstr "Systeemvakpictogram uitschakelen"
 
+#: ConfigDialog#140
+msgctxt "ConfigDialog#140"
+msgid "Database optimized successfully!"
+msgstr ""
+
+#: ConfigDialog#141
+msgctxt "ConfigDialog#141"
+msgid "Could not optimize database!"
+msgstr ""
+
+#: ConfigDialog#142
+msgid "Error saving configuration"
+msgstr ""
+
+#: ConfigDialog#143
+msgid ""
+"There was an error while saving the configuration. This is probably due to "
+"an internal error or you being not authorized to perform the operation"
+msgstr ""
+
+#: ConfigDialog#144
+msgid ""
+"There was an error while trying to add the mirror! This could be due also to "
+"your system policy preventing you from performing this action"
+msgstr ""
+
+#: ConfigDialog#145
+msgid ""
+"<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
+"html40/strict.dtd\">\n"
+"<html><head><meta name=\"qrichtext\" content=\"1\" /><style type=\"text/css\">\n"
+"p, li { white-space: pre-wrap; }\n"
+"</style></head><body style=\" font-family:'Liberation Serif'; font-size:10pt; "
+"font-weight:400; font-style:normal;\">\n"
+"<p style=\" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-"
+"right:0px; -qt-block-indent:0; text-indent:0px;\"><span style=\" font-"
+"family:'Liberation Sans'; font-size:9pt;\">Shaman Manteinance.</span></p>\n"
+"<p style=\" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-"
+"right:0px; -qt-block-indent:0; text-indent:0px;\"><span style=\" font-"
+"family:'Liberation Sans'; font-size:9pt;\">Please choose an action from the "
+"Drop-Down Menu.</span></p></body></html>"
+msgstr ""
+
 #: EditPBuild#1
 msgid "Saving"
 msgstr "Bezig met opslaan"
@@ -1028,6 +1080,112 @@ msgid ""
 msgstr ""
 "U hebt deze PKGBUILD gewijzigd.\n"
 "Wilt u het opslaan?"
+
+#: ErrorHandler#1
+msgid "There has been an error while preparing the transaction."
+msgstr ""
+
+#: ErrorHandler#2
+msgid "Some dependencies can not be satisfied"
+msgstr ""
+
+#: ErrorHandler#3
+msgid "%1: requires %2"
+msgstr ""
+
+#: ErrorHandler#4
+msgid "Some dependencies create a conflict with already installed packages"
+msgstr ""
+
+#: ErrorHandler#5
+msgid "%1: conflicts with %2"
+msgstr ""
+
+#: ErrorHandler#6
+msgid "No further details were given. Last error string was:"
+msgstr ""
+
+#: ErrorHandler#7
+msgid "There has been an error while committing the transaction."
+msgstr ""
+
+#: ErrorHandler#8
+msgid "Some files in the packages being processed are conflicting"
+msgstr ""
+
+#: ErrorHandler#9
+#, fuzzy
+msgctxt "ErrorHandler#9"
+msgid "%1 exists in both '%2' and '%3'"
+msgstr "%1 bestaat zowel in '%2' en '%3'"
+
+#: ErrorHandler#10
+msgid ""
+"Some files in the packages being processed conflict with the local "
+"filesystem"
+msgstr ""
+
+#: ErrorHandler#11
+msgid "%1: %2 exists in the filesystem"
+msgstr ""
+
+#: ErrorHandler#12
+msgid "Some downloaded packages are corrupted or invalid"
+msgstr ""
+
+#: ErrorHandler#13
+msgid "%1 is invalid or corrupted"
+msgstr ""
+
+#: ErrorHandler#14
+msgid "There has been an error while adding a target."
+msgstr ""
+
+#: ErrorHandler#15
+msgid ""
+"This is probably an internal Shaman error. Please report it to help the "
+"developers solving it"
+msgstr ""
+
+#: ErrorHandler#16
+msgid "You seem not authorized to perform this operation"
+msgstr ""
+
+#: ErrorHandler#17
+msgid ""
+"It looks like the system policy prevents you from doing this action, or you "
+"failed or refused to authenticate. Please contact your system administrator "
+"for further details"
+msgstr ""
+
+#: ErrorHandler#18
+msgid "There was a problem initialiting Aqpm"
+msgstr ""
+
+#: ErrorHandler#19
+msgid ""
+"Aqpm, the library underneath Shaman, reported that it could not start a "
+"privileged operation. This is probably due to a bug in Shaman/Aqpm or to a "
+"misconfiguration of your system"
+msgstr ""
+
+#: ErrorHandler#20
+msgid "There was an error during the transaction"
+msgstr ""
+
+#: ErrorHandler#21
+msgid ""
+"It looks like Aqpm's worker crashed or disappeared. This is probably an "
+"internal Shaman error. Please report it to help the developers solving it"
+msgstr ""
+
+#: ErrorHandler#22
+msgid "The transaction was interrupted"
+msgstr ""
+
+#: ErrorHandler#23
+msgid "Error occurred"
+msgstr ""
 
 #: LocalPackage#1
 msgid "Install Package from File"
@@ -1070,6 +1228,7 @@ msgid "Cancel"
 msgstr "Annuleren"
 
 #: LocalPackage#6
+msgctxt "LocalPackage#6"
 msgid "Install Package"
 msgstr "Pakket installeren"
 
@@ -1090,7 +1249,14 @@ msgstr "Alle afhankelijkheden zijn nagekomen"
 msgid "%n package(s) will be installed as dependencies"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
+
+#: LocalPackageDialog#5
+#, fuzzy
+msgctxt "LocalPackageDialog#5"
+msgid "Install Package"
+msgstr "Pakket installeren"
 
 #: MainWindow#1
 msgctxt "MainWindow#1"
@@ -1582,8 +1748,8 @@ msgstr "Instellingen..."
 msgid "About..."
 msgstr "Over..."
 
-#. (obsolete)
 #: MainWindow#93
+#, fuzzy
 msgctxt "MainWindow#93"
 msgid "Update Database"
 msgstr "Database bijwerken"
@@ -1611,8 +1777,8 @@ msgctxt "MainWindow#98"
 msgid "Quit"
 msgstr "Afsluiten"
 
-#. (obsolete)
 #: MainWindow#99
+#, fuzzy
 msgctxt "MainWindow#99"
 msgid "Process Queue"
 msgstr "Wachtrij verwerken"
@@ -1633,6 +1799,75 @@ msgstr "Ctrl+Q"
 #: MainWindow#103
 msgid "Name and Description"
 msgstr "Naam en omschrijving"
+
+#: MainWindow#104
+#, fuzzy
+msgctxt "MainWindow#104"
+msgid ""
+"%1 requires installing %2 from IgnorePkg/IgnoreGroup.\n"
+" Install anyway?"
+msgstr ""
+"%1 vereist de installatie van %2 uit de IgnorePkg/IgnoreGroup.\n"
+"      Toch installeren?"
+
+#: MainWindow#105
+#, fuzzy
+msgctxt "MainWindow#105"
+msgid ""
+"%1 is in IgnorePkg/IgnoreGroup.\n"
+" Install anyway?"
+msgstr ""
+"%1 is vermeld in IgnorePkg/IgnoreGroup.\n"
+"      Toch installeren?"
+
+#: MainWindow#106
+#, fuzzy
+msgctxt "MainWindow#106"
+msgid "Replace %1 with %2/%3?"
+msgstr "%1 vervangen door %2/%3?"
+
+#: MainWindow#107
+msgid ""
+"%1 conflicts with %2.\n"
+"Remove %2?"
+msgstr ""
+
+#: MainWindow#108
+#, fuzzy
+msgid ""
+"The following package(s) cannot be upgraded due to unresolvable "
+"dependencies:\n"
+"%1\n"
+"\n"
+"Do you want to skip the above package(s) for this upgrade?"
+msgstr ""
+"\n"
+"            \n"
+"        "
+
+#: MainWindow#109
+#, fuzzy
+msgctxt "MainWindow#109"
+msgid ""
+"%1-%2: local version is newer.\n"
+"Upgrade anyway?"
+msgstr ""
+"%1-%2: lokale versie is recenter.\n"
+"Toch vernieuwen?"
+
+#: MainWindow#110
+#, fuzzy
+msgctxt "MainWindow#110"
+msgid ""
+"File %1 is corrupted.\n"
+"Do you want to delete it?"
+msgstr ""
+"Bestand %1 is corrupt.\n"
+"Wilt u het verwijderen?"
+
+#: MainWindow#111
+msgid "Transaction Question"
+msgstr ""
 
 #: MaintenanceBar#1
 msgid "Please choose an action to start maintenance..."
@@ -1678,8 +1913,8 @@ msgctxt "MaintenanceBar#9"
 msgid "Deleting Cache..."
 msgstr "Cache wordt verwijderd..."
 
-#. (obsolete)
 #: MaintenanceBar#10
+#, fuzzy
 msgctxt "MaintenanceBar#10"
 msgid "Optimizing Pacman Database..."
 msgstr "Pacman-database wordt geoptimaliseerd..."
@@ -1790,6 +2025,16 @@ msgstr "sync kon niet worden uitgevoerd."
 #: MaintenanceBar#30
 msgid "Maintenance Actions"
 msgstr "Onderhoudshandelingen"
+
+#: MaintenanceBar#31
+msgctxt "MaintenanceBar#31"
+msgid "Database optimized successfully!"
+msgstr ""
+
+#: MaintenanceBar#32
+msgctxt "MaintenanceBar#32"
+msgid "Could not optimize database!"
+msgstr ""
 
 #: NewsViewer#1
 msgid "Please wait, fetching items..."
@@ -1935,6 +2180,7 @@ msgctxt "QObject#14"
 msgid "Please Wait..."
 msgstr "Even geduld a.u.b..."
 
+#. (obsolete)
 #: QObject#15
 msgid ""
 "Shaman can not be started as root.\n"
@@ -1943,6 +2189,7 @@ msgstr ""
 "Shaman mag niet gestart worden als root.\n"
 "Start opnieuw als een normale gebruiker."
 
+#. (obsolete)
 #: QObject#16
 msgid ""
 "You have started Shaman as root.\n"
@@ -1974,6 +2221,11 @@ msgstr "Pakketten worden geladen..."
 #: QObject#20
 msgid "Starting up Shaman..."
 msgstr "Shaman wordt opgestart..."
+
+#: QObject#21
+msgid ""
+"Shaman can not be started as root. Please restart it as unprivileged user."
+msgstr ""
 
 #: QueueDialog#1
 msgid "<br><b> * Validating Transaction</b><br>"
@@ -2068,6 +2320,7 @@ msgid "Starting downloading packages from %1..."
 msgstr "Het downloaden van de pakketten van %1 wordt gestart..."
 
 # You just have to translate 'remaining' here. Leave everything else as it is.
+#. (obsolete)
 #: QueueDialog#24
 msgid "%p% (%1 KB/s, %4:%5:%6 remaining)"
 msgstr "%p% (%1 KB/s, %4:%5:%6 resterend)"
@@ -2140,13 +2393,24 @@ msgstr ""
 "Wilt u het verwerken van de wachtrij onderbreken?\n"
 "Dit kan uw systeem beschadigen."
 
+#. (obsolete)
 #: QueueDialog#39
 msgid "There has been an error while preparing the transaction.\n"
 msgstr "Er is een fout opgetreden bij het voorbereiden van de transactie.\n"
 
+#. (obsolete)
 #: QueueDialog#40
 msgid "There has been an error while committing the transaction.\n"
 msgstr "Er is een fout opgetreden bij het bevestigen van de transactie."
+
+#: QueueDialog#41
+msgid "Running package scripts..."
+msgstr ""
+
+# You just have to translate 'remaining' here. Leave everything else as it is.
+#: QueueDialog#42
+msgid "%p% (%1 KB/s, %2 remaining)"
+msgstr ""
 
 #: QueueReadyDialog#1
 msgid "Review Queue"
@@ -2284,14 +2548,16 @@ msgstr "Wilt u verder gaan?"
 msgid "Remove <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #: ReviewQueueDialog#17
 #, fuzzy
 msgid "Install/Upgrade <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #: ShamanStatusBar#1
 msgid "%1 Available Packages, %2 Installed Packages, %3 Upgradeable Packages"
@@ -2401,7 +2667,8 @@ msgid ""
 "Click here to upgrade your System."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #. (obsolete)
 #: SysUpgradeDialog#1
@@ -2434,7 +2701,14 @@ msgid ""
 "add it to the current Queue<br> and process it later."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
+
+#: SysUpgradeDialog#5
+#, fuzzy
+msgctxt "SysUpgradeDialog#5"
+msgid "System Upgrade"
+msgstr "Systeem bijwerken"
 
 #: aboutDialog#1
 msgid "About Shaman"
