--- a/translations/tr/shaman_tr.po
+++ b/translations/tr/shaman_tr.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-08-22 01:34+0200\n"
+"POT-Creation-Date: 2009-08-22 02:01+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,6 +29,7 @@ msgstr "Alpm daha fazla ayrıntı vermedi."
 
 #. (obsolete)
 #: AlpmHandler#4
+msgctxt "AlpmHandler#4"
 msgid "%1 exists in both '%2' and '%3'"
 msgstr "%1 hem '%2' hem de '%3' içinde bulunuyor"
 
@@ -239,10 +240,12 @@ msgid ""
 "configuration to improve your building performance."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #. (obsolete)
 #: CallBacks#1
+msgctxt "CallBacks#1"
 msgid ""
 "%1 requires installing %2 from IgnorePkg/IgnoreGroup.\n"
 " Install anyway?"
@@ -252,6 +255,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#2
+msgctxt "CallBacks#2"
 msgid ""
 "%1 is in IgnorePkg/IgnoreGroup.\n"
 " Install anyway?"
@@ -270,6 +274,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#4
+msgctxt "CallBacks#4"
 msgid "Replace %1 with %2/%3?"
 msgstr "%1, %2/%3 ile değiştirilsin mi?"
 
@@ -284,6 +289,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#6
+msgctxt "CallBacks#6"
 msgid ""
 "%1-%2: local version is newer.\n"
 "Upgrade anyway?"
@@ -293,6 +299,7 @@ msgstr ""
 
 #. (obsolete)
 #: CallBacks#7
+msgctxt "CallBacks#7"
 msgid ""
 "File %1 is corrupted.\n"
 "Do you want to delete it?"
@@ -365,8 +372,8 @@ msgctxt "ConfigDialog#14"
 msgid "Deleting Cache..."
 msgstr "Cache Siliniyor..."
 
-#. (obsolete)
 #: ConfigDialog#15
+#, fuzzy
 msgctxt "ConfigDialog#15"
 msgid "Optimizing Pacman Database..."
 msgstr "Pacman Veritabanı İyileştiriliyor..."
@@ -908,6 +915,7 @@ msgstr "Shaman'ın kök yetkileriyle çalışmasını yasakla"
 msgid "Saving Configuration"
 msgstr "Yapılandırma Kaydediliyor"
 
+#. (obsolete)
 #: ConfigDialog#122
 msgid "Unable to save Pacman configuration!"
 msgstr "Pacman yapılandırması kaydedilemiyor!"
@@ -964,6 +972,7 @@ msgstr ""
 "block-indent:0; text-indent:0px; font-family:'Liberation Sans'; font-"
 "size:9pt;\">Lütfen Menüden Bir Eylem Seçin.</p></body></html>"
 
+#. (obsolete)
 #: ConfigDialog#127
 msgid ""
 "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
@@ -1062,6 +1071,49 @@ msgstr "Şu dili kullan:"
 msgid "Disable Tray Icon"
 msgstr "Sistem tablası simgesini devredışı bırak"
 
+#: ConfigDialog#141
+msgctxt "ConfigDialog#141"
+msgid "Database optimized successfully!"
+msgstr ""
+
+#: ConfigDialog#142
+msgctxt "ConfigDialog#142"
+msgid "Could not optimize database!"
+msgstr ""
+
+#: ConfigDialog#143
+msgid "Error saving configuration"
+msgstr ""
+
+#: ConfigDialog#144
+msgid ""
+"There was an error while saving the configuration. This is probably due to "
+"an internal error or you being not authorized to perform the operation"
+msgstr ""
+
+#: ConfigDialog#145
+msgid ""
+"There was an error while trying to add the mirror! This could be due also to "
+"your system policy preventing you from performing this action"
+msgstr ""
+
+#: ConfigDialog#146
+msgid ""
+"<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
+"html40/strict.dtd\">\n"
+"<html><head><meta name=\"qrichtext\" content=\"1\" /><style type=\"text/css\">\n"
+"p, li { white-space: pre-wrap; }\n"
+"</style></head><body style=\" font-family:'Liberation Serif'; font-size:10pt; "
+"font-weight:400; font-style:normal;\">\n"
+"<p style=\" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-"
+"right:0px; -qt-block-indent:0; text-indent:0px;\"><span style=\" font-"
+"family:'Liberation Sans'; font-size:9pt;\">Shaman Manteinance.</span></p>\n"
+"<p style=\" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-"
+"right:0px; -qt-block-indent:0; text-indent:0px;\"><span style=\" font-"
+"family:'Liberation Sans'; font-size:9pt;\">Please choose an action from the "
+"Drop-Down Menu.</span></p></body></html>"
+msgstr ""
+
 #: EditPBuild#1
 msgid "Saving"
 msgstr "Kaydediliyor"
@@ -1073,6 +1125,112 @@ msgid ""
 msgstr ""
 "Bu PKGBUILD'i değiştirdiniz.\n"
 "Kaydetmek ister misiniz?"
+
+#: ErrorHandler#1
+msgid "There has been an error while preparing the transaction."
+msgstr ""
+
+#: ErrorHandler#2
+msgid "Some dependencies can not be satisfied"
+msgstr ""
+
+#: ErrorHandler#3
+msgid "%1: requires %2"
+msgstr ""
+
+#: ErrorHandler#4
+msgid "Some dependencies create a conflict with already installed packages"
+msgstr ""
+
+#: ErrorHandler#5
+msgid "%1: conflicts with %2"
+msgstr ""
+
+#: ErrorHandler#6
+msgid "No further details were given. Last error string was:"
+msgstr ""
+
+#: ErrorHandler#7
+msgid "There has been an error while committing the transaction."
+msgstr ""
+
+#: ErrorHandler#8
+msgid "Some files in the packages being processed are conflicting"
+msgstr ""
+
+#: ErrorHandler#9
+#, fuzzy
+msgctxt "ErrorHandler#9"
+msgid "%1 exists in both '%2' and '%3'"
+msgstr "%1 hem '%2' hem de '%3' içinde bulunuyor"
+
+#: ErrorHandler#10
+msgid ""
+"Some files in the packages being processed conflict with the local "
+"filesystem"
+msgstr ""
+
+#: ErrorHandler#11
+msgid "%1: %2 exists in the filesystem"
+msgstr ""
+
+#: ErrorHandler#12
+msgid "Some downloaded packages are corrupted or invalid"
+msgstr ""
+
+#: ErrorHandler#13
+msgid "%1 is invalid or corrupted"
+msgstr ""
+
+#: ErrorHandler#14
+msgid "There has been an error while adding a target."
+msgstr ""
+
+#: ErrorHandler#15
+msgid ""
+"This is probably an internal Shaman error. Please report it to help the "
+"developers solving it"
+msgstr ""
+
+#: ErrorHandler#16
+msgid "You seem not authorized to perform this operation"
+msgstr ""
+
+#: ErrorHandler#17
+msgid ""
+"It looks like the system policy prevents you from doing this action, or you "
+"failed or refused to authenticate. Please contact your system administrator "
+"for further details"
+msgstr ""
+
+#: ErrorHandler#18
+msgid "There was a problem initialiting Aqpm"
+msgstr ""
+
+#: ErrorHandler#19
+msgid ""
+"Aqpm, the library underneath Shaman, reported that it could not start a "
+"privileged operation. This is probably due to a bug in Shaman/Aqpm or to a "
+"misconfiguration of your system"
+msgstr ""
+
+#: ErrorHandler#20
+msgid "There was an error during the transaction"
+msgstr ""
+
+#: ErrorHandler#21
+msgid ""
+"It looks like Aqpm's worker crashed or disappeared. This is probably an "
+"internal Shaman error. Please report it to help the developers solving it"
+msgstr ""
+
+#: ErrorHandler#22
+msgid "The transaction was interrupted"
+msgstr ""
+
+#: ErrorHandler#23
+msgid "Error occurred"
+msgstr ""
 
 #: LocalPackage#1
 msgid "Install Package from File"
@@ -1115,6 +1273,7 @@ msgid "Cancel"
 msgstr "İptal"
 
 #: LocalPackage#6
+msgctxt "LocalPackage#6"
 msgid "Install Package"
 msgstr "Paketi Kur"
 
@@ -1135,7 +1294,14 @@ msgstr "Bütün bağımlılıklar sağlandı"
 msgid "%n package(s) will be installed as dependencies"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
+
+#: LocalPackageDialog#5
+#, fuzzy
+msgctxt "LocalPackageDialog#5"
+msgid "Install Package"
+msgstr "Paketi Kur"
 
 #: MainWindow#1
 msgctxt "MainWindow#1"
@@ -1626,8 +1792,8 @@ msgstr "Ayarlar..."
 msgid "About..."
 msgstr "Hakkında..."
 
-#. (obsolete)
 #: MainWindow#89
+#, fuzzy
 msgctxt "MainWindow#89"
 msgid "Update Database"
 msgstr "Veritabanını Güncelle"
@@ -1655,8 +1821,8 @@ msgctxt "MainWindow#94"
 msgid "Quit"
 msgstr "Çıkış"
 
-#. (obsolete)
 #: MainWindow#95
+#, fuzzy
 msgctxt "MainWindow#95"
 msgid "Process Queue"
 msgstr "Sırayı İşle"
@@ -1840,6 +2006,75 @@ msgstr "Ctrl+Q"
 msgid "Name and Description"
 msgstr "İsim ve Açıklama"
 
+#: MainWindow#125
+#, fuzzy
+msgctxt "MainWindow#125"
+msgid ""
+"%1 requires installing %2 from IgnorePkg/IgnoreGroup.\n"
+" Install anyway?"
+msgstr ""
+"%1, IgnorePkg/IgnoreGroup içinden %2'nin yüklenmesini gerektiriyor.\n"
+" Yine de yüklensin mi?"
+
+#: MainWindow#126
+#, fuzzy
+msgctxt "MainWindow#126"
+msgid ""
+"%1 is in IgnorePkg/IgnoreGroup.\n"
+" Install anyway?"
+msgstr ""
+"%1, IgnorePkg/IgnoreGroup içinde yer alıyor.\n"
+" Yine de yüklensin mi?"
+
+#: MainWindow#127
+#, fuzzy
+msgctxt "MainWindow#127"
+msgid "Replace %1 with %2/%3?"
+msgstr "%1, %2/%3 ile değiştirilsin mi?"
+
+#: MainWindow#128
+msgid ""
+"%1 conflicts with %2.\n"
+"Remove %2?"
+msgstr ""
+
+#: MainWindow#129
+#, fuzzy
+msgid ""
+"The following package(s) cannot be upgraded due to unresolvable "
+"dependencies:\n"
+"%1\n"
+"\n"
+"Do you want to skip the above package(s) for this upgrade?"
+msgstr ""
+"\n"
+"            \n"
+"        "
+
+#: MainWindow#130
+#, fuzzy
+msgctxt "MainWindow#130"
+msgid ""
+"%1-%2: local version is newer.\n"
+"Upgrade anyway?"
+msgstr ""
+"%1-%2: yerel sürüm daha yeni.\n"
+"Yine de güncellensin mi?"
+
+#: MainWindow#131
+#, fuzzy
+msgctxt "MainWindow#131"
+msgid ""
+"File %1 is corrupted.\n"
+"Do you want to delete it?"
+msgstr ""
+"%1 dosyası bozuk.\n"
+"Silmek ister msiniz?"
+
+#: MainWindow#132
+msgid "Transaction Question"
+msgstr ""
+
 #: MaintenanceBar#1
 msgid "Please choose an action to start maintenance..."
 msgstr "Bakımı başlatmak için bir eylem seçin..."
@@ -1884,8 +2119,8 @@ msgctxt "MaintenanceBar#9"
 msgid "Deleting Cache..."
 msgstr "Ön bellek Siliniyor..."
 
-#. (obsolete)
 #: MaintenanceBar#10
+#, fuzzy
 msgctxt "MaintenanceBar#10"
 msgid "Optimizing Pacman Database..."
 msgstr "Pacman Veritabanı İyileştiriliyor..."
@@ -1996,6 +2231,16 @@ msgstr "Sync çalıştırılamıyor!"
 #: MaintenanceBar#30
 msgid "Maintenance Actions"
 msgstr "Bakım Eylemleri"
+
+#: MaintenanceBar#31
+msgctxt "MaintenanceBar#31"
+msgid "Database optimized successfully!"
+msgstr ""
+
+#: MaintenanceBar#32
+msgctxt "MaintenanceBar#32"
+msgid "Could not optimize database!"
+msgstr ""
 
 #: NewsViewer#1
 msgid "Please wait, fetching items..."
@@ -2122,6 +2367,7 @@ msgstr ""
 "Ayarlarınız yazılamaz görünüyor.\n"
 "Lütfen izinlerini kontrol edin."
 
+#. (obsolete)
 #: QObject#11
 msgid ""
 "You have started Shaman as root.\n"
@@ -2155,6 +2401,7 @@ msgstr ""
 "Shaman'ın diğer bir kopyası çalışıyor.\n"
 "Bir seferde sadece bir Shaman kopyası çalıştırabilirsiniz."
 
+#. (obsolete)
 #: QObject#16
 msgid ""
 "Shaman can not be started as root.\n"
@@ -2209,6 +2456,11 @@ msgstr "İ&ptal"
 #: QObject#24
 msgid "Whoa, that's co&ol!"
 msgstr "Ha ha ha, bu iyi&ydi!"
+
+#: QObject#25
+msgid ""
+"Shaman can not be started as root. Please restart it as unprivileged user."
+msgstr ""
 
 #: QueueDialog#1
 msgid "<br><b> * Validating Transaction</b><br>"
@@ -2303,6 +2555,7 @@ msgid "Starting downloading packages from %1..."
 msgstr "Paketlerin %1 deposundan indirilmesine başlanıyor..."
 
 # You just have to translate 'remaining' here. Leave everything else as it is.
+#. (obsolete)
 #: QueueDialog#24
 msgid "%p% (%1 KB/s, %4:%5:%6 remaining)"
 msgstr "%p% (%1 KB/s, %4:%5:%6 kaldı)"
@@ -2375,10 +2628,12 @@ msgstr ""
 "Sıra İşlemeyi iptal etmek ister misiniz?\n"
 "Bu sisteminize zarar verebilir."
 
+#. (obsolete)
 #: QueueDialog#39
 msgid "There has been an error while preparing the transaction.\n"
 msgstr "İşleme hazırlanılırken bir hata oluştu.\n"
 
+#. (obsolete)
 #: QueueDialog#40
 msgid "There has been an error while committing the transaction.\n"
 msgstr "İşlem gerçekleştirilirken bir hata oluştu.\n"
@@ -2388,6 +2643,15 @@ msgstr "İşlem gerçekleştirilirken bir hata oluştu.\n"
 msgctxt "QueueDialog#41"
 msgid "Ok"
 msgstr "Tamam"
+
+#: QueueDialog#42
+msgid "Running package scripts..."
+msgstr ""
+
+# You just have to translate 'remaining' here. Leave everything else as it is.
+#: QueueDialog#43
+msgid "%p% (%1 KB/s, %2 remaining)"
+msgstr ""
 
 #: QueueReadyDialog#1
 msgid "Review Queue"
@@ -2526,14 +2790,16 @@ msgstr "<b>%1</b> alan boşalacak"
 msgid "Remove <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #: ReviewQueueDialog#17
 #, fuzzy
 msgid "Install/Upgrade <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #: ShamanStatusBar#1
 msgid "%1 Available Packages, %2 Installed Packages, %3 Upgradeable Packages"
@@ -2641,7 +2907,8 @@ msgid ""
 "Click here to upgrade your System."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
 
 #. (obsolete)
 #: SysUpgradeDialog#1
@@ -2673,7 +2940,14 @@ msgid ""
 "add it to the current Queue<br> and process it later."
 msgstr ""
 "\n"
-"            "
+"            \n"
+"        "
+
+#: SysUpgradeDialog#5
+#, fuzzy
+msgctxt "SysUpgradeDialog#5"
+msgid "System Upgrade"
+msgstr "Sistem Yükseltme"
 
 #: aboutDialog#1
 msgid "About Shaman"
